--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_addition_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_addition_plot.tex
@@ -1,6 +1,6 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Fri 10 Jan 2025 11:06:26 AM UTC
+%% Mon 13 Jan 2025 06:15:43 PM UTC
 \tikzset{every node/.append style={scale=1.00}}
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{rgb color={0.753,0.753,0.753}}
@@ -14,270 +14,265 @@
 \node[gp node right] at (2.240,2.153) {$9.4\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,2.999)--(13.667,2.999);
+\draw[gp path] (2.424,2.980)--(13.667,2.980);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.999)--(2.604,2.999);
-\node[gp node right] at (2.240,3.307) {$9.5\times10^{10}$};
+\draw[gp path] (2.424,2.980)--(2.604,2.980);
+\node[gp node right] at (2.240,3.288) {$9.5\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,4.153)--(13.667,4.153);
+\draw[gp path] (2.424,4.114)--(13.667,4.114);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.153)--(2.604,4.153);
-\node[gp node right] at (2.240,4.461) {$9.6\times10^{10}$};
+\draw[gp path] (2.424,4.114)--(2.604,4.114);
+\node[gp node right] at (2.240,4.422) {$9.6\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,5.306)--(13.667,5.306);
+\draw[gp path] (2.424,5.249)--(13.667,5.249);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,5.306)--(2.604,5.306);
-\node[gp node right] at (2.240,5.614) {$9.7\times10^{10}$};
+\draw[gp path] (2.424,5.249)--(2.604,5.249);
+\node[gp node right] at (2.240,5.557) {$9.7\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,6.460)--(13.667,6.460);
+\draw[gp path] (2.424,6.383)--(13.667,6.383);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.460)--(2.604,6.460);
-\node[gp node right] at (2.240,6.768) {$9.8\times10^{10}$};
+\draw[gp path] (2.424,6.383)--(2.604,6.383);
+\node[gp node right] at (2.240,6.691) {$9.8\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,7.614)--(13.667,7.614);
+\draw[gp path] (2.424,7.517)--(13.667,7.517);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.614)--(2.604,7.614);
-\node[gp node right] at (2.240,7.922) {$9.9\times10^{10}$};
+\draw[gp path] (2.424,7.517)--(2.604,7.517);
+\node[gp node right] at (2.240,7.825) {$9.9\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,8.768)--(13.667,8.768);
+\draw[gp path] (2.424,8.652)--(13.667,8.652);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,8.768)--(2.604,8.768);
-\node[gp node right] at (2.240,9.076) {$1\times10^{11}$};
+\draw[gp path] (2.424,8.652)--(2.604,8.652);
+\node[gp node right] at (2.240,8.960) {$1\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,9.921)--(7.047,9.921);
-\draw[gp path] (13.483,9.921)--(13.667,9.921);
+\draw[gp path] (2.424,9.787)--(13.667,9.787);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.921)--(2.604,9.921);
-\node[gp node right] at (2.240,10.229) {$1.01\times10^{11}$};
+\draw[gp path] (2.424,9.787)--(2.604,9.787);
+\node[gp node right] at (2.240,10.095) {$1.01\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,11.075)--(13.667,11.075);
+\draw[gp path] (2.424,10.921)--(13.667,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.604,11.075);
-\node[gp node right] at (2.240,11.383) {$1.02\times10^{11}$};
+\draw[gp path] (2.424,10.921)--(2.604,10.921);
+\node[gp node right] at (2.240,11.229) {$1.02\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,1.845)--(2.424,11.075);
+\draw[gp path] (2.424,1.845)--(2.424,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,1.845)--(2.424,2.025);
-\draw[gp path] (2.424,11.075)--(2.424,10.895);
+\draw[gp path] (2.424,10.921)--(2.424,10.741);
 \node[gp node left,rotate=270] at (2.424,1.661) {$0$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (4.673,1.845)--(4.673,11.075);
+\draw[gp path] (4.673,1.845)--(4.673,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (4.673,1.845)--(4.673,2.025);
-\draw[gp path] (4.673,11.075)--(4.673,10.895);
+\draw[gp path] (4.673,10.921)--(4.673,10.741);
 \node[gp node left,rotate=270] at (4.673,1.661) {$60$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (6.921,1.845)--(6.921,11.075);
+\draw[gp path] (6.921,1.845)--(6.921,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (6.921,1.845)--(6.921,2.025);
-\draw[gp path] (6.921,11.075)--(6.921,10.895);
+\draw[gp path] (6.921,10.921)--(6.921,10.741);
 \node[gp node left,rotate=270] at (6.921,1.661) {$120$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (9.170,1.845)--(9.170,9.355);
-\draw[gp path] (9.170,10.895)--(9.170,11.075);
+\draw[gp path] (9.170,1.845)--(9.170,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (9.170,1.845)--(9.170,2.025);
-\draw[gp path] (9.170,11.075)--(9.170,10.895);
+\draw[gp path] (9.170,10.921)--(9.170,10.741);
 \node[gp node left,rotate=270] at (9.170,1.661) {$180$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (11.418,1.845)--(11.418,9.355);
-\draw[gp path] (11.418,10.895)--(11.418,11.075);
+\draw[gp path] (11.418,1.845)--(11.418,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (11.418,1.845)--(11.418,2.025);
-\draw[gp path] (11.418,11.075)--(11.418,10.895);
+\draw[gp path] (11.418,10.921)--(11.418,10.741);
 \node[gp node left,rotate=270] at (11.418,1.661) {$240$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (13.667,1.845)--(13.667,11.075);
+\draw[gp path] (13.667,1.845)--(13.667,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (13.667,1.845)--(13.667,2.025);
-\draw[gp path] (13.667,11.075)--(13.667,10.895);
+\draw[gp path] (13.667,10.921)--(13.667,10.741);
 \node[gp node left,rotate=270] at (13.667,1.661) {$300$};
 \draw[gp path] (13.667,1.845)--(13.487,1.845);
 \node[gp node left] at (13.851,2.153) {$150000$};
-\draw[gp path] (13.667,2.999)--(13.487,2.999);
-\node[gp node left] at (13.851,3.307) {$155000$};
-\draw[gp path] (13.667,4.153)--(13.487,4.153);
-\node[gp node left] at (13.851,4.461) {$160000$};
-\draw[gp path] (13.667,5.306)--(13.487,5.306);
-\node[gp node left] at (13.851,5.614) {$165000$};
-\draw[gp path] (13.667,6.460)--(13.487,6.460);
-\node[gp node left] at (13.851,6.768) {$170000$};
-\draw[gp path] (13.667,7.614)--(13.487,7.614);
-\node[gp node left] at (13.851,7.922) {$175000$};
-\draw[gp path] (13.667,8.768)--(13.487,8.768);
-\node[gp node left] at (13.851,9.076) {$180000$};
-\draw[gp path] (13.667,9.921)--(13.487,9.921);
-\node[gp node left] at (13.851,10.229) {$185000$};
-\draw[gp path] (13.667,11.075)--(13.487,11.075);
-\node[gp node left] at (13.851,11.383) {$190000$};
-\draw[gp path] (2.424,11.075)--(2.424,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
-\draw[gp path] (7.047,9.355)--(7.047,10.895)--(13.483,10.895)--(13.483,9.355)--cycle;
-\node[gp node right] at (12.199,10.510) {Strategic Urgency};
+\draw[gp path] (13.667,2.980)--(13.487,2.980);
+\node[gp node left] at (13.851,3.288) {$155000$};
+\draw[gp path] (13.667,4.114)--(13.487,4.114);
+\node[gp node left] at (13.851,4.422) {$160000$};
+\draw[gp path] (13.667,5.249)--(13.487,5.249);
+\node[gp node left] at (13.851,5.557) {$165000$};
+\draw[gp path] (13.667,6.383)--(13.487,6.383);
+\node[gp node left] at (13.851,6.691) {$170000$};
+\draw[gp path] (13.667,7.518)--(13.487,7.518);
+\node[gp node left] at (13.851,7.826) {$175000$};
+\draw[gp path] (13.667,8.652)--(13.487,8.652);
+\node[gp node left] at (13.851,8.960) {$180000$};
+\draw[gp path] (13.667,9.787)--(13.487,9.787);
+\node[gp node left] at (13.851,10.095) {$185000$};
+\draw[gp path] (13.667,10.921)--(13.487,10.921);
+\node[gp node left] at (13.851,11.229) {$190000$};
+\draw[gp path] (2.424,10.921)--(2.424,1.845)--(13.667,1.845)--(13.667,10.921)--cycle;
+\draw[gp path] (1.609,11.820)--(1.609,12.590)--(14.481,12.590)--(14.481,11.820)--cycle;
+\node[gp node right] at (6.761,12.205) {Strategic Urgency};
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.50}
-\draw[gp path] (12.383,10.510)--(13.299,10.510);
-\draw[gp path] (2.424,9.704)--(2.424,9.775)--(2.424,9.755)--(2.461,9.771)--(2.461,9.827)%
-  --(2.461,9.840)--(2.499,9.901)--(2.499,9.999)--(2.499,10.009)--(2.499,10.006)--(2.536,10.017)%
-  --(2.536,10.074)--(2.574,10.099)--(2.574,10.071)--(2.611,10.073)--(2.611,10.125)--(2.649,10.131)%
-  --(2.649,10.126)--(2.686,10.123)--(2.686,10.098)--(2.724,10.156)--(2.724,10.164)--(2.761,10.170)%
-  --(2.799,10.217)--(2.799,10.232)--(2.799,10.236)--(2.836,10.236)--(2.874,10.231)--(2.874,10.238)%
-  --(2.874,10.278)--(2.911,10.294)--(2.911,10.321)--(2.986,10.336)--(3.024,10.326)--(3.061,10.327)%
-  --(3.061,10.335)--(3.136,10.329)--(3.136,10.270)--(3.174,10.308)--(3.174,10.287)--(3.211,10.245)%
-  --(3.211,10.266)--(3.248,10.266)--(3.398,10.316)--(3.398,10.305)--(3.398,10.342)--(3.436,10.343)%
-  --(3.473,10.333)--(3.473,10.340)--(3.473,10.362)--(3.511,10.355)--(3.511,10.383)--(3.548,10.393)%
-  --(3.548,10.431)--(3.586,10.419)--(3.586,10.420)--(3.623,10.411)--(3.623,10.372)--(3.623,10.371)%
-  --(3.661,10.362)--(3.661,10.361)--(3.698,10.356)--(3.698,10.352)--(3.773,10.374)--(3.811,10.392)%
-  --(3.811,10.427)--(3.811,10.426)--(3.848,10.434)--(3.848,10.417)--(3.886,10.421)--(3.923,10.411)%
-  --(4.035,10.415)--(4.185,10.384)--(4.223,10.361)--(4.298,10.399)--(4.298,10.367)--(4.373,10.372)%
-  --(4.410,10.400)--(4.448,10.416)--(4.485,10.428)--(4.523,10.484)--(4.560,10.473)--(4.598,10.469)%
-  --(4.710,10.451)--(4.748,10.480)--(4.748,10.439)--(4.748,10.469)--(4.785,10.435)--(4.860,10.464)%
-  --(4.860,10.458)--(4.897,10.436)--(4.897,10.443)--(5.085,10.467)--(5.085,10.438)--(5.272,10.410)%
-  --(5.272,10.447)--(5.310,10.460)--(5.347,10.475)--(5.460,10.488)--(5.460,10.497)--(5.460,10.491)%
-  --(5.497,10.511)--(5.572,10.530)--(5.610,10.540)--(5.797,10.520)--(5.797,10.499)--(5.947,10.493)%
-  --(5.984,10.485)--(6.097,10.288)--(6.097,10.117)--(6.097,9.902)--(6.134,9.591)--(6.134,9.493)%
-  --(6.134,9.421)--(6.134,9.340)--(6.134,9.267)--(6.172,9.183)--(6.172,9.109)--(6.172,9.047)%
-  --(6.172,8.908)--(6.172,8.593)--(6.209,8.568)--(6.209,8.484)--(6.209,8.449)--(6.209,8.385)%
-  --(6.209,8.315)--(6.209,8.291)--(6.247,8.196)--(6.247,8.150)--(6.247,8.131)--(6.247,8.088)%
-  --(6.247,8.051)--(6.247,8.081)--(6.284,7.989)--(6.284,7.954)--(6.284,7.975)--(6.284,7.958)%
-  --(6.284,7.937)--(6.284,7.869)--(6.322,7.820)--(6.322,7.935)--(6.322,7.877)--(6.322,7.855)%
-  --(6.322,7.859)--(6.322,7.855)--(6.322,7.820)--(6.359,7.752)--(6.359,7.725)--(6.359,7.751)%
-  --(6.359,7.614)--(6.359,7.617)--(6.359,7.706)--(6.359,7.604)--(6.397,7.627)--(6.397,7.846)%
-  --(6.397,7.749)--(6.397,7.776)--(6.397,7.735)--(6.397,7.956)--(6.397,7.890)--(6.434,7.811)%
-  --(6.434,7.771)--(6.434,7.784)--(6.434,7.752)--(6.434,7.716)--(6.434,7.743)--(6.434,7.727)%
-  --(6.471,7.737)--(6.471,7.715)--(6.471,7.711)--(6.471,7.875)--(6.471,7.864)--(6.471,7.867)%
-  --(6.509,7.838)--(6.509,7.856)--(6.509,7.841)--(6.509,7.889)--(6.509,7.841)--(6.509,7.783)%
-  --(6.509,7.759)--(6.546,7.712)--(6.546,7.685)--(6.546,7.751)--(6.546,7.710)--(6.546,7.679)%
-  --(6.546,7.676)--(6.546,7.661)--(6.584,7.639)--(6.584,7.717)--(6.584,7.749)--(6.584,7.676)%
-  --(6.584,7.682)--(6.584,7.663)--(6.584,7.654)--(6.584,7.629)--(6.584,7.644)--(6.621,7.594)%
-  --(6.621,7.595)--(6.621,7.568)--(6.621,7.574)--(6.621,7.585)--(6.621,7.526)--(6.659,7.465)%
-  --(6.659,7.451)--(6.659,7.400)--(6.659,7.427)--(6.659,7.418)--(6.696,7.407)--(6.696,7.383)%
-  --(6.696,7.328)--(6.696,7.323)--(6.696,7.317)--(6.696,7.308)--(6.734,7.287)--(6.734,7.282)%
-  --(6.734,7.196)--(6.734,7.225)--(6.809,7.212)--(6.809,7.266)--(6.846,7.280)--(6.846,7.178)%
-  --(6.846,7.115)--(6.884,7.125)--(6.884,7.104)--(6.884,7.130)--(6.884,7.140)--(6.921,7.258)%
-  --(6.921,7.273)--(6.959,7.261)--(6.996,7.326)--(7.034,7.300)--(7.071,7.288)--(7.109,7.282)%
-  --(7.109,7.284)--(7.109,7.274)--(7.146,7.245)--(7.184,7.235)--(7.221,7.216)--(7.258,7.312)%
-  --(7.296,7.291)--(7.296,7.230)--(7.333,7.218)--(7.408,7.262)--(7.446,7.273)--(7.446,7.278)%
-  --(7.446,7.256)--(7.483,7.243)--(7.558,7.235)--(7.558,7.203)--(7.558,7.133)--(7.558,7.139)%
-  --(7.596,7.115)--(7.671,7.180)--(7.783,7.156)--(7.858,7.174)--(8.008,7.157)--(8.008,7.151)%
-  --(8.083,7.136)--(8.158,7.110)--(8.158,7.093)--(8.233,7.079)--(8.233,7.074)--(8.233,7.103)%
-  --(8.270,7.092)--(8.345,7.080)--(8.458,7.095)--(8.533,7.070)--(8.870,7.052)--(9.245,7.062)%
-  --(9.245,7.043)--(9.320,7.030)--(9.357,6.999)--(9.432,6.983)--(9.470,6.984)--(9.470,6.969)%
-  --(9.545,6.898)--(9.769,6.875)--(9.807,6.943)--(9.844,6.761)--(9.844,6.543)--(9.844,6.370)%
-  --(9.844,6.214)--(9.844,6.074)--(9.882,6.007)--(9.882,5.907)--(9.882,5.827)--(9.882,5.738)%
-  --(9.882,5.641)--(9.882,5.589)--(9.882,5.495)--(9.882,5.442)--(9.882,5.435)--(9.919,5.207)%
-  --(9.919,5.193)--(9.919,5.117)--(9.919,5.001)--(9.919,4.956)--(9.919,4.911)--(9.919,4.773)%
-  --(9.919,4.662)--(9.957,4.624)--(9.957,4.544)--(9.957,4.428)--(9.957,4.433)--(9.957,4.387)%
-  --(9.957,4.381)--(9.957,4.380)--(9.957,4.353)--(9.994,4.302)--(9.994,4.280)--(9.994,3.800)%
-  --(9.994,3.756)--(9.994,3.721)--(9.994,3.708)--(9.994,3.669)--(10.032,3.641)--(10.032,3.622)%
-  --(10.032,3.540)--(10.069,3.531)--(10.069,3.518)--(10.069,3.460)--(10.069,3.099)--(10.069,3.097)%
-  --(10.069,3.075)--(10.107,3.002)--(10.107,2.998)--(10.107,2.974)--(10.107,2.961)--(10.107,2.983)%
-  --(10.107,2.985)--(10.107,2.988)--(10.144,2.939)--(10.144,2.899)--(10.182,2.816)--(10.219,2.813)%
-  --(10.219,2.756)--(10.219,2.743)--(10.219,2.735)--(10.219,2.713)--(10.257,2.684)--(10.257,2.728)%
-  --(10.257,2.697)--(10.294,2.633)--(10.294,2.624)--(10.294,2.588)--(10.332,2.575)--(10.332,2.544)%
-  --(10.332,2.533)--(10.369,2.477)--(10.369,2.500)--(10.369,2.491)--(10.369,2.461)--(10.407,2.461)%
-  --(10.407,2.507)--(10.444,2.505)--(10.444,2.454)--(10.481,2.422)--(10.481,2.379)--(10.481,2.363)%
-  --(10.519,2.350)--(10.519,2.330)--(10.519,2.309)--(10.556,2.282)--(10.594,2.279)--(10.631,2.243)%
-  --(10.706,2.230)--(10.706,2.214)--(10.706,2.161)--(10.744,2.150)--(10.819,2.193)--(10.819,2.183)%
-  --(10.819,2.173)--(10.819,2.160)--(10.819,2.148)--(10.856,2.140)--(10.856,2.137)--(10.856,2.135)%
-  --(10.894,2.139)--(10.931,2.143)--(11.006,2.116)--(11.006,2.072)--(11.081,2.070)--(11.119,2.063)%
-  --(11.156,2.055)--(11.231,2.017)--(11.231,2.006)--(11.343,1.996)--(11.343,1.989)--(11.343,1.986)%
-  --(11.381,1.976)--(11.381,1.967)--(11.456,1.952)--(11.493,1.939)--(11.531,1.938)--(11.643,1.925)%
-  --(11.643,1.906)--(11.681,1.899)--(11.681,1.901)--(11.718,1.888)--(11.756,1.888)--(11.868,1.888);
+\draw[gp path] (6.945,12.205)--(7.861,12.205);
+\draw[gp path] (2.424,9.608)--(2.461,9.600)--(2.461,9.690)--(2.461,9.685)--(2.499,9.903)%
+  --(2.499,9.926)--(2.499,9.953)--(2.536,9.910)--(2.536,9.870)--(2.536,9.940)--(2.574,9.927)%
+  --(2.574,10.126)--(2.574,10.150)--(2.611,10.125)--(2.611,10.252)--(2.649,10.218)--(2.724,10.250)%
+  --(2.724,10.197)--(2.724,10.186)--(2.761,10.170)--(2.836,10.194)--(2.836,10.189)--(2.874,10.212)%
+  --(2.874,10.273)--(2.874,10.244)--(2.911,10.249)--(2.911,10.245)--(2.949,10.266)--(2.949,10.307)%
+  --(2.986,10.284)--(2.986,10.272)--(3.061,10.262)--(3.099,10.225)--(3.136,10.227)--(3.136,10.230)%
+  --(3.136,10.246)--(3.174,10.259)--(3.174,10.302)--(3.174,10.281)--(3.211,10.292)--(3.211,10.351)%
+  --(3.248,10.362)--(3.248,10.386)--(3.323,10.372)--(3.323,10.385)--(3.361,10.411)--(3.361,10.408)%
+  --(3.361,10.405)--(3.398,10.407)--(3.398,10.414)--(3.473,10.411)--(3.511,10.380)--(3.511,10.394)%
+  --(3.548,10.397)--(3.586,10.455)--(3.586,10.481)--(3.661,10.471)--(3.661,10.489)--(3.698,10.528)%
+  --(3.736,10.484)--(3.736,10.466)--(3.773,10.481)--(3.848,10.473)--(3.886,10.475)--(4.035,10.475)%
+  --(4.073,10.533)--(4.110,10.569)--(4.110,10.528)--(4.148,10.564)--(4.148,10.577)--(4.185,10.589)%
+  --(4.185,10.571)--(4.223,10.568)--(4.223,10.541)--(4.260,10.535)--(4.335,10.510)--(4.410,10.535)%
+  --(4.448,10.539)--(4.523,10.549)--(4.523,10.566)--(4.560,10.589)--(4.598,10.510)--(4.598,10.508)%
+  --(4.635,10.449)--(4.635,10.430)--(4.673,10.429)--(4.710,10.407)--(4.748,10.407)--(4.785,10.400)%
+  --(4.785,10.408)--(4.823,10.379)--(4.860,10.359)--(4.860,10.385)--(4.897,10.355)--(4.935,10.352)%
+  --(5.047,10.364)--(5.047,10.366)--(5.085,10.365)--(5.122,10.365)--(5.460,10.372)--(5.535,10.358)%
+  --(5.572,10.324)--(5.909,10.306)--(5.984,10.324)--(6.097,10.347)--(6.097,10.187)--(6.097,10.024)%
+  --(6.134,9.727)--(6.134,9.624)--(6.134,9.372)--(6.134,9.289)--(6.172,9.192)--(6.172,9.124)%
+  --(6.172,9.100)--(6.172,9.046)--(6.172,9.022)--(6.209,8.981)--(6.209,8.884)--(6.209,8.624)%
+  --(6.209,8.449)--(6.209,8.353)--(6.247,8.280)--(6.247,8.269)--(6.247,8.244)--(6.247,8.192)%
+  --(6.284,8.211)--(6.284,8.185)--(6.284,8.171)--(6.284,8.068)--(6.284,7.999)--(6.322,7.867)%
+  --(6.322,7.812)--(6.322,7.858)--(6.322,7.849)--(6.322,7.832)--(6.359,7.810)--(6.359,7.842)%
+  --(6.359,7.812)--(6.359,7.898)--(6.359,8.019)--(6.359,7.992)--(6.397,8.149)--(6.397,8.084)%
+  --(6.397,8.016)--(6.397,8.031)--(6.397,7.950)--(6.397,8.107)--(6.434,8.174)--(6.434,8.215)%
+  --(6.434,8.130)--(6.434,8.065)--(6.434,8.267)--(6.471,8.330)--(6.471,8.285)--(6.471,8.228)%
+  --(6.471,8.298)--(6.471,8.202)--(6.471,8.165)--(6.509,8.135)--(6.509,8.120)--(6.509,8.127)%
+  --(6.509,8.089)--(6.509,8.023)--(6.509,8.036)--(6.546,8.018)--(6.546,8.116)--(6.546,8.057)%
+  --(6.546,8.009)--(6.546,7.994)--(6.546,7.984)--(6.584,7.990)--(6.584,7.979)--(6.584,7.932)%
+  --(6.584,7.921)--(6.584,7.950)--(6.621,7.962)--(6.621,7.954)--(6.621,7.884)--(6.621,7.908)%
+  --(6.621,7.921)--(6.659,7.880)--(6.659,7.944)--(6.659,7.895)--(6.696,7.939)--(6.696,7.999)%
+  --(6.696,7.990)--(6.696,7.958)--(6.734,7.934)--(6.734,7.930)--(6.734,7.863)--(6.734,7.865)%
+  --(6.734,7.863)--(6.734,7.851)--(6.771,7.835)--(6.771,7.841)--(6.771,7.793)--(6.771,7.771)%
+  --(6.771,7.807)--(6.809,7.816)--(6.809,7.822)--(6.809,7.849)--(6.809,7.797)--(6.809,7.890)%
+  --(6.846,7.838)--(6.846,7.930)--(6.846,7.916)--(6.846,7.976)--(6.846,7.975)--(6.884,7.943)%
+  --(6.884,7.960)--(6.884,8.026)--(6.884,8.059)--(6.921,8.105)--(6.921,8.060)--(6.921,7.983)%
+  --(6.921,8.027)--(6.921,7.980)--(6.959,7.974)--(6.996,7.985)--(6.996,7.957)--(6.996,7.932)%
+  --(6.996,7.872)--(7.034,7.885)--(7.034,7.851)--(7.071,7.799)--(7.071,7.859)--(7.109,7.883)%
+  --(7.109,7.772)--(7.109,7.682)--(7.146,7.712)--(7.146,7.658)--(7.146,7.638)--(7.184,7.629)%
+  --(7.184,7.696)--(7.221,7.515)--(7.221,7.467)--(7.221,7.562)--(7.221,7.568)--(7.258,7.575)%
+  --(7.258,7.580)--(7.296,7.518)--(7.333,7.475)--(7.333,7.485)--(7.371,7.461)--(7.371,7.434)%
+  --(7.408,7.449)--(7.446,7.424)--(7.558,7.384)--(7.671,7.348)--(7.746,7.430)--(7.746,7.422)%
+  --(7.821,7.393)--(7.821,7.396)--(7.821,7.330)--(7.896,7.336)--(7.896,7.341)--(8.046,7.310)%
+  --(8.083,7.295)--(8.158,7.263)--(8.195,7.297)--(8.233,7.261)--(8.233,7.226)--(8.270,7.256)%
+  --(8.383,7.239)--(8.683,7.236)--(8.720,7.177)--(8.982,7.141)--(9.657,7.054)--(9.732,7.030)%
+  --(9.844,6.958)--(9.844,6.815)--(9.882,6.622)--(9.882,6.342)--(9.882,6.249)--(9.882,6.153)%
+  --(9.882,5.966)--(9.882,5.469)--(9.882,5.347)--(9.919,5.232)--(9.919,4.768)--(9.919,4.705)%
+  --(9.919,4.624)--(9.919,4.556)--(9.957,4.509)--(9.957,4.491)--(9.957,4.327)--(9.957,4.227)%
+  --(9.994,4.227)--(9.994,4.179)--(9.994,4.157)--(10.032,4.015)--(10.032,3.964)--(10.032,3.931)%
+  --(10.032,3.917)--(10.032,3.903)--(10.069,3.850)--(10.069,3.804)--(10.069,3.768)--(10.069,3.749)%
+  --(10.107,3.802)--(10.107,3.742)--(10.107,3.715)--(10.107,3.652)--(10.144,3.616)--(10.144,3.597)%
+  --(10.144,3.558)--(10.144,3.534)--(10.144,3.514)--(10.182,3.516)--(10.182,3.478)--(10.182,3.444)%
+  --(10.219,3.417)--(10.219,3.369)--(10.219,3.342)--(10.257,3.287)--(10.257,3.285)--(10.257,3.280)%
+  --(10.257,3.278)--(10.294,3.261)--(10.332,3.229)--(10.332,3.217)--(10.332,3.178)--(10.369,3.167)%
+  --(10.369,3.124)--(10.369,3.119)--(10.407,3.107)--(10.407,3.097)--(10.444,2.992)--(10.444,2.987)%
+  --(10.444,2.977)--(10.444,2.963)--(10.481,3.012)--(10.519,3.000)--(10.519,2.960)--(10.556,2.933)%
+  --(10.556,2.934)--(10.594,2.916)--(10.631,2.945)--(10.669,2.927)--(10.669,2.897)--(10.669,2.857)%
+  --(10.706,2.943)--(10.744,2.928)--(10.744,2.912)--(10.744,2.906)--(10.781,2.880)--(10.781,2.848)%
+  --(10.819,2.837)--(10.856,2.820)--(10.856,2.818)--(10.856,2.807)--(10.856,2.775)--(10.894,2.724)%
+  --(10.894,2.700)--(10.931,2.687)--(10.969,2.680)--(11.006,2.661)--(11.044,2.571)--(11.044,2.560)%
+  --(11.081,2.565)--(11.081,2.556)--(11.081,2.537)--(11.081,2.529)--(11.081,2.507)--(11.119,2.508)%
+  --(11.119,2.498)--(11.119,2.490)--(11.156,2.476)--(11.156,2.434)--(11.156,2.406)--(11.268,2.396)%
+  --(11.268,2.398)--(11.306,2.377)--(11.343,2.353)--(11.343,2.330)--(11.343,2.297)--(11.381,2.286)%
+  --(11.381,2.264)--(11.456,2.260)--(11.456,2.263)--(11.493,2.265)--(11.493,2.258)--(11.531,2.240)%
+  --(11.568,2.235)--(11.568,2.214)--(11.568,2.205)--(11.643,2.192)--(11.681,2.188)--(11.756,2.192)%
+  --(11.756,2.186)--(11.831,2.177)--(11.831,2.168)--(11.868,2.164)--(11.868,2.138)--(11.943,2.129)%
+  --(11.981,2.113)--(12.056,2.111)--(12.093,2.107);
 \gpcolor{color=gp lt color border}
-\node[gp node right] at (12.199,9.740) {Strategic Resource Penalty};
+\node[gp node right] at (13.197,12.205) {Strategic Resource Penalty};
 \gpcolor{rgb color={0.184,0.243,0.918}}
-\draw[gp path] (12.383,9.740)--(13.299,9.740);
-\draw[gp path] (2.424,10.654)--(2.424,10.614)--(2.424,10.574)--(2.461,10.554)--(2.461,10.540)%
-  --(2.461,10.509)--(2.499,10.481)--(2.499,10.463)--(2.499,10.451)--(2.499,10.437)--(2.536,10.416)%
-  --(2.536,10.397)--(2.574,10.392)--(2.574,10.389)--(2.611,10.388)--(2.611,10.387)--(2.649,10.382)%
-  --(2.649,10.379)--(2.686,10.377)--(2.686,10.359)--(2.724,10.351)--(2.724,10.350)--(2.761,10.343)%
-  --(2.799,10.341)--(2.799,10.334)--(2.799,10.328)--(2.836,10.326)--(2.874,10.321)--(2.874,10.320)%
-  --(2.874,10.316)--(2.911,10.311)--(2.986,10.311)--(2.986,10.309)--(3.024,10.308)--(3.061,10.308)%
-  --(3.061,10.302)--(3.136,10.295)--(3.136,10.286)--(3.174,10.284)--(3.174,10.280)--(3.211,10.270)%
-  --(3.211,10.269)--(3.211,10.266)--(3.248,10.266)--(3.398,10.250)--(3.398,10.247)--(3.398,10.246)%
-  --(3.436,10.245)--(3.473,10.244)--(3.473,10.243)--(3.473,10.239)--(3.511,10.238)--(3.511,10.237)%
-  --(3.548,10.235)--(3.548,10.234)--(3.586,10.230)--(3.586,10.224)--(3.586,10.222)--(3.623,10.221)%
-  --(3.623,10.220)--(3.661,10.218)--(3.661,10.214)--(3.698,10.214)--(3.698,10.211)--(3.773,10.209)%
-  --(3.811,10.208)--(3.811,10.207)--(3.811,10.205)--(3.848,10.203)--(3.848,10.202)--(3.886,10.202)%
-  --(3.923,10.200)--(4.035,10.193)--(4.185,10.190)--(4.223,10.187)--(4.298,10.184)--(4.373,10.184)%
-  --(4.410,10.183)--(4.448,10.180)--(4.485,10.180)--(4.523,10.180)--(4.560,10.179)--(4.598,10.179)%
-  --(4.710,10.179)--(4.748,10.179)--(4.748,10.177)--(4.748,10.172)--(4.785,10.172)--(4.860,10.166)%
-  --(4.860,10.165)--(4.897,10.164)--(4.897,10.162)--(5.085,10.159)--(5.085,10.158)--(5.272,10.158)%
-  --(5.272,10.157)--(5.310,10.156)--(5.310,10.154)--(5.347,10.152)--(5.460,10.143)--(5.460,10.140)%
-  --(5.460,10.137)--(5.497,10.137)--(5.572,10.136)--(5.610,10.136)--(5.610,10.135)--(5.797,10.135)%
-  --(5.797,10.134)--(5.947,10.134)--(5.984,10.133)--(6.097,8.092)--(6.097,8.035)--(6.097,7.967)%
-  --(6.134,7.930)--(6.134,7.870)--(6.134,7.835)--(6.134,7.765)--(6.134,7.736)--(6.172,7.704)%
-  --(6.172,7.640)--(6.172,7.590)--(6.172,7.556)--(6.172,7.460)--(6.209,7.421)--(6.209,7.401)%
-  --(6.209,7.392)--(6.209,7.374)--(6.209,7.344)--(6.209,7.312)--(6.247,7.263)--(6.247,7.229)%
-  --(6.247,7.203)--(6.247,7.167)--(6.247,7.120)--(6.247,7.093)--(6.284,7.085)--(6.284,7.072)%
-  --(6.284,7.033)--(6.284,6.982)--(6.284,6.924)--(6.284,6.916)--(6.322,6.871)--(6.322,6.848)%
-  --(6.322,6.830)--(6.322,6.801)--(6.322,6.751)--(6.322,6.743)--(6.322,6.730)--(6.359,6.710)%
-  --(6.359,6.658)--(6.359,6.618)--(6.359,6.557)--(6.359,6.484)--(6.359,6.465)--(6.359,6.421)%
-  --(6.397,6.411)--(6.397,6.387)--(6.397,6.377)--(6.397,6.366)--(6.397,6.355)--(6.397,6.312)%
-  --(6.397,6.275)--(6.434,6.254)--(6.434,6.250)--(6.434,6.233)--(6.434,6.196)--(6.434,6.191)%
-  --(6.434,6.187)--(6.434,6.186)--(6.471,6.180)--(6.471,6.164)--(6.471,6.158)--(6.471,6.113)%
-  --(6.471,6.099)--(6.471,6.085)--(6.471,6.068)--(6.509,6.058)--(6.509,6.052)--(6.509,6.036)%
-  --(6.509,5.980)--(6.509,5.977)--(6.509,5.972)--(6.509,5.959)--(6.546,5.945)--(6.546,5.942)%
-  --(6.546,5.919)--(6.546,5.916)--(6.546,5.914)--(6.546,5.911)--(6.546,5.904)--(6.584,5.864)%
-  --(6.584,5.840)--(6.584,5.776)--(6.584,5.772)--(6.584,5.764)--(6.584,5.732)--(6.584,5.704)%
-  --(6.584,5.696)--(6.621,5.672)--(6.621,5.669)--(6.621,5.662)--(6.621,5.652)--(6.659,5.590)%
-  --(6.659,5.583)--(6.659,5.576)--(6.659,5.574)--(6.696,5.572)--(6.696,5.569)--(6.696,5.568)%
-  --(6.696,5.509)--(6.696,5.507)--(6.734,5.503)--(6.734,5.498)--(6.734,5.448)--(6.734,5.446)%
-  --(6.809,5.428)--(6.809,5.425)--(6.846,5.410)--(6.846,5.382)--(6.846,5.381)--(6.884,5.377)%
-  --(6.884,5.376)--(6.884,5.373)--(6.884,5.372)--(6.921,5.371)--(6.921,5.367)--(6.959,5.367)%
-  --(6.996,5.361)--(7.034,5.359)--(7.071,5.358)--(7.109,5.358)--(7.109,5.354)--(7.109,5.353)%
-  --(7.146,5.353)--(7.184,5.353)--(7.221,5.353)--(7.258,5.352)--(7.296,5.352)--(7.333,5.348)%
-  --(7.408,5.322)--(7.446,5.319)--(7.446,5.317)--(7.446,5.314)--(7.483,5.314)--(7.558,5.314)%
-  --(7.558,5.313)--(7.596,5.313)--(7.671,5.312)--(7.783,5.308)--(7.858,5.308)--(8.008,5.307)%
-  --(8.083,5.301)--(8.158,5.299)--(8.233,5.299)--(8.233,5.298)--(8.270,5.298)--(8.345,5.297)%
-  --(8.458,5.296)--(8.533,5.296)--(8.870,5.296)--(9.245,5.248)--(9.245,5.245)--(9.320,5.245)%
-  --(9.357,5.245)--(9.432,5.245)--(9.470,5.245)--(9.545,5.244)--(9.769,5.244)--(9.807,5.243)%
-  --(9.844,3.578)--(9.844,3.512)--(9.844,3.505)--(9.882,3.505)--(9.882,3.494)--(9.882,3.491)%
-  --(9.919,3.440)--(9.919,3.375)--(9.919,3.302)--(9.919,3.299)--(9.957,3.299)--(9.957,3.258)%
-  --(9.957,3.253)--(9.957,3.218)--(9.994,3.218)--(9.994,3.167)--(10.032,3.167)--(10.032,3.078)%
-  --(10.069,3.041)--(10.069,3.002)--(10.069,3.001)--(10.107,3.001)--(10.107,2.997)--(10.107,2.996)%
-  --(10.144,2.996)--(10.182,2.996)--(10.219,2.996)--(10.257,2.996)--(10.257,2.992)--(10.294,2.992)%
-  --(10.294,2.912)--(10.332,2.912)--(10.332,2.909)--(10.369,2.909)--(10.369,2.861)--(10.407,2.861)%
-  --(10.407,2.858)--(10.444,2.858)--(10.481,2.858)--(10.519,2.858)--(10.519,2.856)--(10.519,2.853)%
-  --(10.556,2.853)--(10.594,2.853)--(10.631,2.853)--(10.706,2.853)--(10.744,2.853)--(10.819,2.850)%
-  --(10.856,2.850)--(10.894,2.850)--(10.931,2.850)--(11.006,2.850)--(11.081,2.850)--(11.119,2.850)%
-  --(11.156,2.850)--(11.231,2.850)--(11.343,2.850)--(11.381,2.850)--(11.456,2.850)--(11.493,2.850)%
-  --(11.531,2.850)--(11.643,2.850)--(11.681,2.850)--(11.718,2.850)--(11.756,2.850)--(11.868,2.850);
+\draw[gp path] (13.381,12.205)--(14.297,12.205);
+\draw[gp path] (2.424,10.511)--(2.461,10.475)--(2.461,10.462)--(2.461,10.445)--(2.499,10.424)%
+  --(2.499,10.412)--(2.499,10.386)--(2.536,10.364)--(2.536,10.361)--(2.536,10.351)--(2.574,10.331)%
+  --(2.574,10.313)--(2.574,10.304)--(2.611,10.300)--(2.611,10.295)--(2.649,10.286)--(2.724,10.283)%
+  --(2.724,10.275)--(2.724,10.260)--(2.761,10.258)--(2.836,10.248)--(2.836,10.245)--(2.874,10.240)%
+  --(2.874,10.236)--(2.874,10.232)--(2.911,10.227)--(2.911,10.226)--(2.949,10.219)--(2.949,10.215)%
+  --(2.986,10.214)--(2.986,10.213)--(3.061,10.211)--(3.099,10.209)--(3.136,10.208)--(3.136,10.207)%
+  --(3.136,10.206)--(3.174,10.195)--(3.174,10.187)--(3.174,10.179)--(3.211,10.178)--(3.211,10.174)%
+  --(3.248,10.172)--(3.248,10.170)--(3.323,10.165)--(3.323,10.163)--(3.361,10.162)--(3.361,10.157)%
+  --(3.361,10.155)--(3.398,10.150)--(3.398,10.148)--(3.473,10.147)--(3.511,10.140)--(3.548,10.134)%
+  --(3.586,10.132)--(3.661,10.130)--(3.661,10.129)--(3.698,10.127)--(3.736,10.127)--(3.736,10.124)%
+  --(3.773,10.123)--(3.848,10.114)--(3.886,10.109)--(4.035,10.106)--(4.073,10.105)--(4.110,10.097)%
+  --(4.110,10.094)--(4.148,10.092)--(4.185,10.087)--(4.185,10.086)--(4.223,10.086)--(4.223,10.085)%
+  --(4.260,10.083)--(4.335,10.082)--(4.410,10.078)--(4.448,10.077)--(4.523,10.076)--(4.523,10.074)%
+  --(4.560,10.071)--(4.598,10.066)--(4.598,10.064)--(4.635,10.064)--(4.635,10.061)--(4.673,10.049)%
+  --(4.710,10.045)--(4.748,10.043)--(4.785,10.037)--(4.785,10.034)--(4.823,10.034)--(4.860,10.033)%
+  --(4.860,10.032)--(4.897,10.032)--(4.935,10.031)--(5.047,10.031)--(5.047,10.029)--(5.085,10.029)%
+  --(5.122,10.029)--(5.460,10.029)--(5.535,10.027)--(5.572,10.027)--(5.909,10.027)--(5.984,10.027)%
+  --(6.097,10.026)--(6.097,8.051)--(6.097,7.997)--(6.134,7.958)--(6.134,7.828)--(6.134,7.785)%
+  --(6.134,7.712)--(6.172,7.635)--(6.172,7.576)--(6.172,7.535)--(6.172,7.440)--(6.172,7.413)%
+  --(6.209,7.351)--(6.209,7.319)--(6.209,7.263)--(6.209,7.242)--(6.209,7.225)--(6.247,7.219)%
+  --(6.247,7.173)--(6.247,7.122)--(6.247,7.090)--(6.284,6.997)--(6.284,6.932)--(6.284,6.883)%
+  --(6.284,6.847)--(6.284,6.842)--(6.322,6.721)--(6.322,6.702)--(6.322,6.631)--(6.322,6.619)%
+  --(6.322,6.578)--(6.359,6.538)--(6.359,6.513)--(6.359,6.507)--(6.359,6.484)--(6.359,6.468)%
+  --(6.359,6.424)--(6.397,6.322)--(6.397,6.299)--(6.397,6.263)--(6.397,6.253)--(6.397,6.196)%
+  --(6.397,6.184)--(6.434,6.167)--(6.434,6.157)--(6.434,6.125)--(6.434,6.108)--(6.434,6.065)%
+  --(6.471,5.986)--(6.471,5.979)--(6.471,5.971)--(6.471,5.949)--(6.471,5.909)--(6.471,5.892)%
+  --(6.509,5.845)--(6.509,5.830)--(6.509,5.821)--(6.509,5.816)--(6.509,5.784)--(6.509,5.779)%
+  --(6.546,5.771)--(6.546,5.739)--(6.546,5.688)--(6.546,5.673)--(6.546,5.668)--(6.546,5.663)%
+  --(6.584,5.659)--(6.584,5.654)--(6.584,5.642)--(6.584,5.641)--(6.584,5.639)--(6.621,5.635)%
+  --(6.621,5.630)--(6.621,5.622)--(6.621,5.619)--(6.621,5.588)--(6.659,5.565)--(6.659,5.564)%
+  --(6.659,5.545)--(6.696,5.536)--(6.696,5.524)--(6.696,5.521)--(6.696,5.520)--(6.734,5.515)%
+  --(6.734,5.511)--(6.734,5.510)--(6.734,5.501)--(6.734,5.497)--(6.734,5.495)--(6.771,5.488)%
+  --(6.771,5.485)--(6.771,5.481)--(6.771,5.474)--(6.771,5.472)--(6.809,5.471)--(6.809,5.467)%
+  --(6.809,5.464)--(6.809,5.458)--(6.809,5.454)--(6.846,5.450)--(6.846,5.407)--(6.846,5.400)%
+  --(6.884,5.400)--(6.884,5.387)--(6.884,5.379)--(6.884,5.378)--(6.921,5.372)--(6.921,5.371)%
+  --(6.921,5.365)--(6.921,5.362)--(6.921,5.358)--(6.959,5.358)--(6.996,5.356)--(6.996,5.355)%
+  --(6.996,5.344)--(6.996,5.339)--(7.034,5.303)--(7.034,5.302)--(7.071,5.302)--(7.071,5.300)%
+  --(7.109,5.297)--(7.109,5.267)--(7.109,5.266)--(7.146,5.262)--(7.146,5.260)--(7.184,5.260)%
+  --(7.184,5.258)--(7.221,5.241)--(7.221,5.238)--(7.258,5.237)--(7.258,5.231)--(7.296,5.231)%
+  --(7.333,5.228)--(7.333,5.222)--(7.371,5.222)--(7.371,5.216)--(7.408,5.213)--(7.446,5.210)%
+  --(7.558,5.209)--(7.671,5.209)--(7.746,5.208)--(7.746,5.207)--(7.821,5.203)--(7.821,5.199)%
+  --(7.896,5.197)--(7.896,5.195)--(8.046,5.195)--(8.083,5.194)--(8.158,5.194)--(8.195,5.193)%
+  --(8.233,5.190)--(8.270,5.189)--(8.383,5.188)--(8.683,5.188)--(8.720,5.188)--(8.982,5.186)%
+  --(9.657,5.184)--(9.732,5.184)--(9.844,3.485)--(9.844,3.483)--(9.882,3.438)--(9.882,3.398)%
+  --(9.882,3.359)--(9.882,3.304)--(9.919,3.304)--(9.919,3.254)--(9.919,3.251)--(9.919,3.242)%
+  --(9.957,3.242)--(9.957,3.233)--(9.957,3.231)--(9.994,3.231)--(9.994,3.229)--(10.032,3.164)%
+  --(10.032,3.161)--(10.069,3.161)--(10.069,3.152)--(10.107,3.147)--(10.107,3.146)--(10.144,3.083)%
+  --(10.182,3.083)--(10.219,3.083)--(10.257,3.083)--(10.294,3.083)--(10.332,3.083)--(10.369,3.083)%
+  --(10.407,3.083)--(10.444,3.034)--(10.481,2.956)--(10.519,2.956)--(10.556,2.956)--(10.594,2.956)%
+  --(10.631,2.950)--(10.669,2.950)--(10.706,2.864)--(10.744,2.864)--(10.781,2.864)--(10.819,2.864)%
+  --(10.856,2.864)--(10.894,2.861)--(10.931,2.861)--(10.969,2.861)--(11.006,2.861)--(11.044,2.861)%
+  --(11.081,2.861)--(11.119,2.861)--(11.156,2.861)--(11.268,2.861)--(11.306,2.861)--(11.343,2.861)%
+  --(11.381,2.861)--(11.456,2.861)--(11.493,2.861)--(11.531,2.861)--(11.568,2.861)--(11.643,2.861)%
+  --(11.681,2.861)--(11.756,2.861)--(11.831,2.861)--(11.868,2.861)--(11.943,2.861)--(11.981,2.861)%
+  --(12.056,2.861)--(12.093,2.861);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.424,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
-\node[gp node center,rotate=-270] at (-0.628,6.460) {Strategic Urgency [Weighted Tardiness]};
-\node[gp node center,rotate=-270] at (16.213,6.460) {Strategic Resource Penalty [Hours]};
+\draw[gp path] (2.424,10.921)--(2.424,1.845)--(13.667,1.845)--(13.667,10.921)--cycle;
+\node[gp node center,rotate=-270] at (-0.628,6.383) {Strategic Urgency [Weighted Tardiness]};
+\node[gp node center,rotate=-270] at (16.213,6.383) {Strategic Resource Penalty [Hours]};
 \node[gp node center] at (8.045,0.215) {Relative time ($\tau$) [Seconds]};
-\node[gp node center] at (8.045,11.537) {Objective Values for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{13.667cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{13.667cm}{10.921cm}}
 \endtikzpicture
 %% gnuplot variables
