--- a/papers/actor-based-large-neighborhood-search/refs.bib
+++ b/papers/actor-based-large-neighborhood-search/refs.bib
@@ -51,6 +51,7 @@
 	        2024 - Metaheuristics for bilevel optimization A comprehensive
 	        review.pdf:application/pdf},
 }
+
 @book{herlihy2020art,
 	title = {The art of multiprocessor programming},
 	author = {Herlihy, Maurice and Shavit, Nir and Luchangco, Victor and Spear,
@@ -303,6 +304,38 @@
 	file = {C:\Users\s174460\Zotero\storage\AJSQAXUV\Pinedo - 2022 - Scheduling
 	        Theory, Algorithms, and Systems.pdf},
 }
+@incollection{pinedoSchedulingTheoryAlgorithms2022chapter17,
+	title = {Scheduling: {{Theory}}, {{Algorithms}}, and {{Systems}}},
+	shorttitle = {Scheduling},
+	author = {Pinedo, Michael L.},
+	year = {2022},
+	publisher = {Springer International Publishing},
+	address = {Cham},
+	doi = {10.1007/978-3-031-05921-6},
+	urldate = {2023-07-05},
+	isbn = {978-3-031-05920-9 978-3-031-05921-6},
+	langid = {english},
+	file = {C:\Users\s174460\Zotero\storage\AJSQAXUV\Pinedo - 2022 - Scheduling
+	        Theory, Algorithms, and Systems.pdf},
+	chapter = {17},
+	pages = {467--493},
+}
+@incollection{pinedoSchedulingTheoryAlgorithms2022chapter18,
+	title = {Scheduling: {{Theory}}, {{Algorithms}}, and {{Systems}}},
+	shorttitle = {Scheduling},
+	author = {Pinedo, Michael L.},
+	year = {2022},
+	publisher = {Springer International Publishing},
+	address = {Cham},
+	doi = {10.1007/978-3-031-05921-6},
+	urldate = {2023-07-05},
+	isbn = {978-3-031-05920-9 978-3-031-05921-6},
+	langid = {english},
+	file = {C:\Users\s174460\Zotero\storage\AJSQAXUV\Pinedo - 2022 - Scheduling
+	        Theory, Algorithms, and Systems.pdf},
+	chapter = {18},
+	pages = {494--518},
+}
 
 @book{gendreauHandbookMetaheuristics2019,
 	title = {Handbook of {{Metaheuristics}}},
@@ -319,6 +352,42 @@
 	langid = {english},
 	file = {C:\Users\s174460\Zotero\storage\4YW2AE5T\Gendreau and Potvin - 2019
 	        - Handbook of Metaheuristics.pdf},
+}
+@incollection{gendreauHandbookMetaheuristics2019lnschapter,
+	title = {Handbook of {{Metaheuristics}}},
+	editor = {Gendreau, Michel and Potvin, Jean-Yves},
+	year = {2019},
+	series = {International {{Series}} in {{Operations Research}} \& {{
+	          Management Science}}},
+	volume = {272},
+	publisher = {Springer International Publishing},
+	address = {Cham},
+	doi = {10.1007/978-3-319-91086-4},
+	urldate = {2023-07-05},
+	isbn = {978-3-319-91085-7 978-3-319-91086-4},
+	langid = {english},
+	file = {C:\Users\s174460\Zotero\storage\4YW2AE5T\Gendreau and Potvin - 2019
+	        - Handbook of Metaheuristics.pdf},
+	chapter = {4},
+	pages = {99--127},
+}
+@incollection{gendreauHandbookMetaheuristics2019parallelchapter,
+	title = {Handbook of {{Metaheuristics}}},
+	editor = {Gendreau, Michel and Potvin, Jean-Yves},
+	year = {2019},
+	series = {International {{Series}} in {{Operations Research}} \& {{
+	          Management Science}}},
+	volume = {272},
+	publisher = {Springer International Publishing},
+	address = {Cham},
+	doi = {10.1007/978-3-319-91086-4},
+	urldate = {2023-07-05},
+	isbn = {978-3-319-91085-7 978-3-319-91086-4},
+	langid = {english},
+	file = {C:\Users\s174460\Zotero\storage\4YW2AE5T\Gendreau and Potvin - 2019
+	        - Handbook of Metaheuristics.pdf},
+	chapter = {13},
+	pages = {419--453},
 }
 
 @book{schwindtHandbookProjectManagement2015a,
@@ -1968,5 +2037,24 @@
 	annotation = {OCLC: ocn230183356},
 	file = {C:\Users\s174460\Zotero\storage\ZMLXI6LK\Talbi - 2009 -
 	        Metaheuristics from design to implementation.pdf},
+}
+@incollection{talbiMetaheuristicsDesignImplementation2009parallelchapter,
+	location = {Hoboken, N.J},
+	title = {Metaheuristics: from design to implementation},
+	isbn = {978-0-470-27858-1},
+	shorttitle = {Metaheuristics},
+	pagetotal = {593},
+	publisher = {John Wiley \& Sons},
+	author = {Talbi, El-Ghazali},
+	date = {2009},
+	langid = {english},
+	note = {{OCLC}: ocn230183356},
+	keywords = {Computer algorithms, Data processing, Heuristic programming,
+	            Mathematical optimization, Metaheuristics, Problem solving},
+	file = {Talbi - 2009 - Metaheuristics from design to
+	        implementation.pdf:/home/cbrje/Zotero/storage/ZMLXI6LK/Talbi - 2009 -
+	        Metaheuristics from design to implementation.pdf:application/pdf},
+	chapter = {6},
+	pages = {460--534},
 }
 
