--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_exclusion_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_exclusion_plot.tex
@@ -1,6 +1,6 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Fri 10 Jan 2025 11:01:55 AM UTC
+%% Mon 13 Jan 2025 06:11:12 PM UTC
 \tikzset{every node/.append style={scale=1.00}}
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{rgb color={0.753,0.753,0.753}}
@@ -11,314 +11,332 @@
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.608,1.845)--(2.788,1.845);
-\node[gp node right] at (2.424,2.153) {$9.6\times10^{10}$};
+\node[gp node right] at (2.424,2.153) {$9.55\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,2.871)--(13.667,2.871);
+\draw[gp path] (2.608,2.670)--(13.667,2.670);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,2.871)--(2.788,2.871);
-\node[gp node right] at (2.424,3.179) {$9.65\times10^{10}$};
+\draw[gp path] (2.608,2.670)--(2.788,2.670);
+\node[gp node right] at (2.424,2.978) {$9.6\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,3.896)--(13.667,3.896);
+\draw[gp path] (2.608,3.495)--(13.667,3.495);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,3.896)--(2.788,3.896);
-\node[gp node right] at (2.424,4.204) {$9.7\times10^{10}$};
+\draw[gp path] (2.608,3.495)--(2.788,3.495);
+\node[gp node right] at (2.424,3.803) {$9.65\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,4.922)--(13.667,4.922);
+\draw[gp path] (2.608,4.320)--(13.667,4.320);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,4.922)--(2.788,4.922);
-\node[gp node right] at (2.424,5.230) {$9.75\times10^{10}$};
+\draw[gp path] (2.608,4.320)--(2.788,4.320);
+\node[gp node right] at (2.424,4.628) {$9.7\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,5.947)--(13.667,5.947);
+\draw[gp path] (2.608,5.145)--(13.667,5.145);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,5.947)--(2.788,5.947);
-\node[gp node right] at (2.424,6.255) {$9.8\times10^{10}$};
+\draw[gp path] (2.608,5.145)--(2.788,5.145);
+\node[gp node right] at (2.424,5.453) {$9.75\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,6.973)--(13.667,6.973);
+\draw[gp path] (2.608,5.970)--(13.667,5.970);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,6.973)--(2.788,6.973);
-\node[gp node right] at (2.424,7.281) {$9.85\times10^{10}$};
+\draw[gp path] (2.608,5.970)--(2.788,5.970);
+\node[gp node right] at (2.424,6.278) {$9.8\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,7.998)--(13.667,7.998);
+\draw[gp path] (2.608,6.796)--(13.667,6.796);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,7.998)--(2.788,7.998);
-\node[gp node right] at (2.424,8.306) {$9.9\times10^{10}$};
+\draw[gp path] (2.608,6.796)--(2.788,6.796);
+\node[gp node right] at (2.424,7.104) {$9.85\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,9.024)--(13.667,9.024);
+\draw[gp path] (2.608,7.621)--(13.667,7.621);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,9.024)--(2.788,9.024);
-\node[gp node right] at (2.424,9.332) {$9.95\times10^{10}$};
+\draw[gp path] (2.608,7.621)--(2.788,7.621);
+\node[gp node right] at (2.424,7.929) {$9.9\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,10.049)--(7.047,10.049);
-\draw[gp path] (13.483,10.049)--(13.667,10.049);
+\draw[gp path] (2.608,8.446)--(13.667,8.446);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,10.049)--(2.788,10.049);
-\node[gp node right] at (2.424,10.357) {$1\times10^{11}$};
+\draw[gp path] (2.608,8.446)--(2.788,8.446);
+\node[gp node right] at (2.424,8.754) {$9.95\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,11.075)--(13.667,11.075);
+\draw[gp path] (2.608,9.271)--(13.667,9.271);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,11.075)--(2.788,11.075);
-\node[gp node right] at (2.424,11.383) {$1.005\times10^{11}$};
+\draw[gp path] (2.608,9.271)--(2.788,9.271);
+\node[gp node right] at (2.424,9.579) {$1\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,1.845)--(2.608,11.075);
+\draw[gp path] (2.608,10.096)--(13.667,10.096);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.608,10.096)--(2.788,10.096);
+\node[gp node right] at (2.424,10.404) {$1.005\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.608,10.921)--(13.667,10.921);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.608,10.921)--(2.788,10.921);
+\node[gp node right] at (2.424,11.229) {$1.01\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.608,1.845)--(2.608,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.608,1.845)--(2.608,2.025);
-\draw[gp path] (2.608,11.075)--(2.608,10.895);
+\draw[gp path] (2.608,10.921)--(2.608,10.741);
 \node[gp node left,rotate=270] at (2.608,1.661) {$0$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (4.188,1.845)--(4.188,11.075);
+\draw[gp path] (4.188,1.845)--(4.188,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (4.188,1.845)--(4.188,2.025);
-\draw[gp path] (4.188,11.075)--(4.188,10.895);
+\draw[gp path] (4.188,10.921)--(4.188,10.741);
 \node[gp node left,rotate=270] at (4.188,1.661) {$60$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (5.768,1.845)--(5.768,11.075);
+\draw[gp path] (5.768,1.845)--(5.768,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (5.768,1.845)--(5.768,2.025);
-\draw[gp path] (5.768,11.075)--(5.768,10.895);
+\draw[gp path] (5.768,10.921)--(5.768,10.741);
 \node[gp node left,rotate=270] at (5.768,1.661) {$120$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (7.348,1.845)--(7.348,9.355);
-\draw[gp path] (7.348,10.895)--(7.348,11.075);
+\draw[gp path] (7.348,1.845)--(7.348,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (7.348,1.845)--(7.348,2.025);
-\draw[gp path] (7.348,11.075)--(7.348,10.895);
+\draw[gp path] (7.348,10.921)--(7.348,10.741);
 \node[gp node left,rotate=270] at (7.348,1.661) {$180$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (8.927,1.845)--(8.927,9.355);
-\draw[gp path] (8.927,10.895)--(8.927,11.075);
+\draw[gp path] (8.927,1.845)--(8.927,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (8.927,1.845)--(8.927,2.025);
-\draw[gp path] (8.927,11.075)--(8.927,10.895);
+\draw[gp path] (8.927,10.921)--(8.927,10.741);
 \node[gp node left,rotate=270] at (8.927,1.661) {$240$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (10.507,1.845)--(10.507,9.355);
-\draw[gp path] (10.507,10.895)--(10.507,11.075);
+\draw[gp path] (10.507,1.845)--(10.507,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (10.507,1.845)--(10.507,2.025);
-\draw[gp path] (10.507,11.075)--(10.507,10.895);
+\draw[gp path] (10.507,10.921)--(10.507,10.741);
 \node[gp node left,rotate=270] at (10.507,1.661) {$300$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (12.087,1.845)--(12.087,9.355);
-\draw[gp path] (12.087,10.895)--(12.087,11.075);
+\draw[gp path] (12.087,1.845)--(12.087,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (12.087,1.845)--(12.087,2.025);
-\draw[gp path] (12.087,11.075)--(12.087,10.895);
+\draw[gp path] (12.087,10.921)--(12.087,10.741);
 \node[gp node left,rotate=270] at (12.087,1.661) {$360$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (13.667,1.845)--(13.667,11.075);
+\draw[gp path] (13.667,1.845)--(13.667,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (13.667,1.845)--(13.667,2.025);
-\draw[gp path] (13.667,11.075)--(13.667,10.895);
+\draw[gp path] (13.667,10.921)--(13.667,10.741);
 \node[gp node left,rotate=270] at (13.667,1.661) {$420$};
 \draw[gp path] (13.667,1.845)--(13.487,1.845);
 \node[gp node left] at (13.851,2.153) {$158000$};
-\draw[gp path] (13.667,3.383)--(13.487,3.383);
-\node[gp node left] at (13.851,3.691) {$160000$};
-\draw[gp path] (13.667,4.922)--(13.487,4.922);
-\node[gp node left] at (13.851,5.230) {$162000$};
-\draw[gp path] (13.667,6.460)--(13.487,6.460);
-\node[gp node left] at (13.851,6.768) {$164000$};
-\draw[gp path] (13.667,7.998)--(13.487,7.998);
-\node[gp node left] at (13.851,8.306) {$166000$};
-\draw[gp path] (13.667,9.537)--(13.487,9.537);
-\node[gp node left] at (13.851,9.845) {$168000$};
-\draw[gp path] (13.667,11.075)--(13.487,11.075);
-\node[gp node left] at (13.851,11.383) {$170000$};
-\draw[gp path] (2.608,11.075)--(2.608,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
-\draw[gp path] (7.047,9.355)--(7.047,10.895)--(13.483,10.895)--(13.483,9.355)--cycle;
-\node[gp node right] at (12.199,10.510) {Strategic Urgency};
+\draw[gp path] (13.667,2.670)--(13.487,2.670);
+\node[gp node left] at (13.851,2.978) {$159000$};
+\draw[gp path] (13.667,3.495)--(13.487,3.495);
+\node[gp node left] at (13.851,3.803) {$160000$};
+\draw[gp path] (13.667,4.320)--(13.487,4.320);
+\node[gp node left] at (13.851,4.628) {$161000$};
+\draw[gp path] (13.667,5.145)--(13.487,5.145);
+\node[gp node left] at (13.851,5.453) {$162000$};
+\draw[gp path] (13.667,5.970)--(13.487,5.970);
+\node[gp node left] at (13.851,6.278) {$163000$};
+\draw[gp path] (13.667,6.796)--(13.487,6.796);
+\node[gp node left] at (13.851,7.104) {$164000$};
+\draw[gp path] (13.667,7.621)--(13.487,7.621);
+\node[gp node left] at (13.851,7.929) {$165000$};
+\draw[gp path] (13.667,8.446)--(13.487,8.446);
+\node[gp node left] at (13.851,8.754) {$166000$};
+\draw[gp path] (13.667,9.271)--(13.487,9.271);
+\node[gp node left] at (13.851,9.579) {$167000$};
+\draw[gp path] (13.667,10.096)--(13.487,10.096);
+\node[gp node left] at (13.851,10.404) {$168000$};
+\draw[gp path] (13.667,10.921)--(13.487,10.921);
+\node[gp node left] at (13.851,11.229) {$169000$};
+\draw[gp path] (2.608,10.921)--(2.608,1.845)--(13.667,1.845)--(13.667,10.921)--cycle;
+\draw[gp path] (1.701,11.820)--(1.701,12.590)--(14.573,12.590)--(14.573,11.820)--cycle;
+\node[gp node right] at (6.853,12.205) {Strategic Urgency};
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.50}
-\draw[gp path] (12.383,10.510)--(13.299,10.510);
-\draw[gp path] (2.608,2.053)--(2.634,1.993)--(2.634,2.251)--(2.634,2.242)--(2.634,2.245)%
-  --(2.661,2.414)--(2.661,2.317)--(2.661,2.618)--(2.687,2.595)--(2.687,2.798)--(2.687,2.761)%
-  --(2.713,2.818)--(2.713,2.829)--(2.713,2.925)--(2.713,3.002)--(2.740,3.004)--(2.740,2.992)%
-  --(2.740,2.926)--(2.740,3.079)--(2.740,3.048)--(2.766,3.059)--(2.766,3.065)--(2.766,3.136)%
-  --(2.766,3.244)--(2.766,3.229)--(2.792,3.128)--(2.792,3.220)--(2.792,3.192)--(2.792,3.309)%
-  --(2.792,3.299)--(2.792,3.304)--(2.819,3.388)--(2.819,3.412)--(2.819,3.518)--(2.819,3.647)%
-  --(2.819,3.703)--(2.819,3.736)--(2.819,3.905)--(2.819,3.823)--(2.845,4.102)--(2.845,4.168)%
-  --(2.845,4.167)--(2.845,4.244)--(2.845,4.549)--(2.845,4.505)--(2.845,4.484)--(2.871,4.478)%
-  --(2.871,4.448)--(2.871,4.415)--(2.871,4.369)--(2.871,4.423)--(2.898,4.432)--(2.898,4.530)%
-  --(2.898,4.466)--(2.898,4.561)--(2.924,4.631)--(2.950,4.628)--(2.950,4.742)--(2.950,4.825)%
-  --(2.950,4.887)--(2.950,4.924)--(2.977,4.949)--(2.977,4.933)--(2.977,4.992)--(3.003,5.028)%
-  --(3.029,5.254)--(3.056,5.208)--(3.056,5.376)--(3.056,5.391)--(3.056,5.483)--(3.082,5.564)%
-  --(3.082,5.557)--(3.108,5.525)--(3.108,5.464)--(3.135,5.462)--(3.187,5.410)--(3.187,5.408)%
-  --(3.214,5.448)--(3.240,5.418)--(3.240,5.193)--(3.266,5.256)--(3.266,5.291)--(3.266,5.253)%
-  --(3.293,5.362)--(3.293,5.291)--(3.293,5.294)--(3.319,5.269)--(3.319,5.402)--(3.319,5.392)%
-  --(3.345,5.376)--(3.345,5.564)--(3.345,5.521)--(3.372,5.498)--(3.372,5.406)--(3.424,5.389)%
-  --(3.451,5.421)--(3.451,5.399)--(3.451,5.347)--(3.451,5.350)--(3.451,5.340)--(3.451,5.374)%
-  --(3.477,5.401)--(3.477,5.273)--(3.503,5.220)--(3.503,5.152)--(3.530,5.159)--(3.530,5.191)%
-  --(3.556,5.167)--(3.582,5.239)--(3.609,5.146)--(3.661,5.135)--(3.714,5.143)--(3.740,5.097)%
-  --(3.740,5.139)--(3.793,5.115)--(3.819,5.090)--(3.872,5.123)--(3.898,5.095)--(4.004,5.100)%
-  --(4.030,5.108)--(4.056,5.066)--(4.056,5.028)--(4.083,5.029)--(4.214,5.048)--(4.267,8.301)%
-  --(4.267,8.334)--(4.267,8.392)--(4.293,8.211)--(4.293,8.223)--(4.293,8.199)--(4.293,8.219)%
-  --(4.320,8.158)--(4.320,8.168)--(4.320,8.204)--(4.320,8.210)--(4.346,8.236)--(4.346,7.900)%
-  --(4.346,7.893)--(4.372,7.883)--(4.372,7.847)--(4.372,7.783)--(4.372,7.744)--(4.372,7.729)%
-  --(4.372,7.807)--(4.399,7.793)--(4.399,7.764)--(4.399,7.789)--(4.399,7.772)--(4.399,7.648)%
-  --(4.425,7.646)--(4.451,7.627)--(4.451,7.592)--(4.451,7.626)--(4.477,7.643)--(4.477,7.616)%
-  --(4.477,7.588)--(4.477,7.604)--(4.530,7.495)--(4.530,7.697)--(4.530,7.726)--(4.556,7.722)%
-  --(4.583,7.797)--(4.583,7.723)--(4.583,7.873)--(4.609,7.924)--(4.635,7.910)--(4.635,7.771)%
-  --(4.688,7.675)--(4.714,7.700)--(4.714,7.629)--(4.741,7.476)--(4.793,7.448)--(4.793,7.427)%
-  --(4.820,7.347)--(4.846,7.327)--(4.925,7.275)--(4.925,7.294)--(4.978,7.261)--(4.978,7.223)%
-  --(5.004,7.207)--(5.004,7.206)--(5.057,7.246)--(5.057,7.289)--(5.083,7.361)--(5.083,7.354)%
-  --(5.083,7.331)--(5.136,7.304)--(5.162,7.351)--(5.162,7.345)--(5.241,7.299)--(5.241,7.292)%
-  --(5.320,7.239)--(5.346,7.280)--(5.399,7.344)--(5.452,7.351)--(5.478,7.300)--(5.610,7.297)%
-  --(5.689,7.287)--(5.794,7.250)--(5.873,9.600)--(5.873,9.601)--(5.873,9.597)--(5.899,9.559)%
-  --(5.899,9.539)--(5.899,9.500)--(5.952,9.441)--(5.952,9.451)--(5.978,9.384)--(5.978,9.365)%
-  --(5.978,9.366)--(5.978,9.338)--(6.005,9.341)--(6.005,9.321)--(6.005,9.466)--(6.005,9.464)%
-  --(6.031,9.359)--(6.031,9.276)--(6.031,9.266)--(6.031,9.221)--(6.057,9.252)--(6.084,9.242)%
-  --(6.084,9.000)--(6.110,9.044)--(6.136,9.008)--(6.136,9.057)--(6.136,9.047)--(6.189,9.009)%
-  --(6.189,8.982)--(6.189,8.955)--(6.215,8.828)--(6.242,8.802)--(6.242,8.839)--(6.242,8.705)%
-  --(6.242,8.759)--(6.294,8.750)--(6.321,8.665)--(6.373,8.666)--(6.426,8.658)--(6.479,8.674)%
-  --(6.479,8.676)--(6.558,8.629)--(6.610,8.712)--(6.637,8.706)--(6.663,8.718)--(6.716,8.656)%
-  --(6.742,8.655)--(6.742,8.612)--(6.768,8.672)--(6.768,8.418)--(6.768,8.378)--(6.795,8.437)%
-  --(6.821,8.426)--(6.874,8.381)--(6.979,8.358)--(6.979,8.310)--(6.979,8.288)--(7.032,8.292)%
-  --(7.058,8.249)--(7.058,8.238)--(7.058,8.227)--(7.190,8.168)--(7.216,8.122)--(7.269,8.150)%
-  --(7.295,8.046)--(7.374,8.109)--(7.400,7.993)--(7.479,10.063)--(7.479,10.048)--(7.479,9.846)%
-  --(7.479,9.740)--(7.506,9.778)--(7.506,9.724)--(7.506,9.613)--(7.506,9.516)--(7.532,9.527)%
-  --(7.532,9.468)--(7.532,9.553)--(7.532,9.554)--(7.558,9.618)--(7.558,9.585)--(7.585,9.638)%
-  --(7.585,9.694)--(7.585,9.747)--(7.611,9.699)--(7.637,9.723)--(7.637,9.688)--(7.664,9.517)%
-  --(7.664,9.490)--(7.690,9.402)--(7.716,9.450)--(7.716,9.437)--(7.743,9.407)--(7.769,9.394)%
-  --(7.769,9.368)--(7.822,9.220)--(7.822,9.168)--(7.901,9.207)--(7.953,9.205)--(7.953,9.146)%
-  --(7.980,9.130)--(8.032,9.094)--(8.085,9.050)--(8.111,9.046)--(8.138,9.046)--(8.138,9.042)%
-  --(8.243,9.124)--(8.243,9.092)--(8.295,9.018)--(8.322,8.980)--(8.401,9.018)--(8.427,9.006)%
-  --(8.427,8.974)--(8.453,8.877)--(8.506,8.878)--(8.532,8.890)--(8.585,8.800)--(8.611,8.776)%
-  --(8.638,8.749)--(8.664,8.800)--(8.743,8.787)--(8.822,8.758)--(8.822,8.676)--(8.875,8.746)%
-  --(8.954,8.735)--(8.954,8.766)--(8.980,8.811)--(8.980,8.833)--(8.980,8.825)--(9.033,8.826)%
-  --(9.059,10.767)--(9.059,10.738)--(9.085,10.716)--(9.085,10.655)--(9.138,10.720)--(9.138,10.700)%
-  --(9.164,10.524)--(9.164,10.504)--(9.217,10.508)--(9.217,10.440)--(9.217,10.371)--(9.243,10.429)%
-  --(9.243,10.302)--(9.270,10.257)--(9.322,10.017)--(9.322,9.988)--(9.322,9.967)--(9.322,9.942)%
-  --(9.349,9.794)--(9.349,9.779)--(9.349,9.742)--(9.375,9.668)--(9.375,9.658)--(9.428,9.656)%
-  --(9.507,9.705)--(9.507,9.622)--(9.533,9.524)--(9.533,9.588)--(9.586,9.623)--(9.586,9.625)%
-  --(9.586,9.461)--(9.717,9.390)--(9.744,9.388)--(9.770,9.434)--(9.796,9.401)--(9.796,9.441)%
-  --(9.796,9.422)--(9.823,9.414)--(9.849,9.440)--(9.954,9.431)--(10.007,9.434)--(10.007,9.405)%
-  --(10.007,9.349)--(10.060,9.419)--(10.165,9.386)--(10.191,9.383)--(10.270,9.374)--(10.270,9.324)%
-  --(10.349,9.355)--(10.402,9.304)--(10.534,9.282)--(10.534,9.262)--(10.692,10.943)--(10.718,11.006)%
-  --(10.718,11.031)--(10.744,11.026)--(10.744,10.840)--(10.744,10.789)--(10.797,10.781)--(10.797,10.819)%
-  --(10.823,10.831)--(10.823,10.912)--(10.823,10.985)--(10.850,10.892)--(10.876,10.867)--(10.876,10.854)%
-  --(10.902,10.904)--(10.929,10.872)--(10.929,10.870)--(10.955,10.873)--(10.955,10.772)--(10.981,10.781)%
-  --(11.008,10.808)--(11.034,10.810)--(11.060,10.685)--(11.060,10.623)--(11.139,10.493)--(11.139,10.427)%
-  --(11.166,10.402)--(11.271,10.404)--(11.271,10.341)--(11.271,10.336)--(11.271,10.349)--(11.297,10.337)%
-  --(11.297,10.315)--(11.324,10.290)--(11.324,10.258)--(11.376,10.231)--(11.508,10.203)--(11.719,10.304)%
-  --(11.745,10.370)--(11.745,10.306)--(11.745,10.318)--(11.771,10.306)--(11.771,10.312)--(11.798,10.297)%
-  --(11.929,10.291)--(11.929,10.304)--(11.955,10.306)--(11.982,10.325)--(12.008,10.336)--(12.061,10.151)%
-  --(12.061,10.033)--(12.166,10.053);
+\draw[gp path] (7.037,12.205)--(7.953,12.205);
+\draw[gp path] (2.608,2.597)--(2.634,2.650)--(2.634,2.593)--(2.634,2.624)--(2.634,2.631)%
+  --(2.634,2.893)--(2.634,2.948)--(2.661,2.956)--(2.661,3.001)--(2.661,3.041)--(2.661,3.224)%
+  --(2.661,3.358)--(2.661,3.443)--(2.661,3.525)--(2.687,3.719)--(2.687,3.693)--(2.687,3.725)%
+  --(2.687,3.733)--(2.687,3.971)--(2.687,4.006)--(2.687,3.993)--(2.713,4.048)--(2.713,4.079)%
+  --(2.713,4.087)--(2.713,4.133)--(2.713,4.223)--(2.740,4.231)--(2.740,4.258)--(2.740,4.424)%
+  --(2.740,4.463)--(2.740,4.574)--(2.740,4.602)--(2.740,4.611)--(2.766,4.617)--(2.766,4.599)%
+  --(2.766,4.628)--(2.766,4.714)--(2.766,4.768)--(2.766,4.732)--(2.766,4.722)--(2.766,4.808)%
+  --(2.792,4.773)--(2.792,4.755)--(2.792,4.834)--(2.792,4.833)--(2.819,4.775)--(2.819,4.724)%
+  --(2.819,4.685)--(2.819,4.649)--(2.819,4.658)--(2.819,4.607)--(2.845,4.652)--(2.845,4.757)%
+  --(2.845,4.728)--(2.845,4.672)--(2.845,4.649)--(2.845,4.675)--(2.871,4.717)--(2.871,4.703)%
+  --(2.871,4.696)--(2.871,4.660)--(2.871,4.670)--(2.898,4.678)--(2.898,4.851)--(2.898,4.850)%
+  --(2.898,4.930)--(2.898,4.999)--(2.898,5.075)--(2.898,5.078)--(2.924,5.298)--(2.924,5.293)%
+  --(2.950,5.271)--(2.977,5.311)--(2.977,5.382)--(3.003,5.413)--(3.003,5.419)--(3.003,5.448)%
+  --(3.003,5.424)--(3.003,5.414)--(3.029,5.405)--(3.056,5.373)--(3.082,5.395)--(3.108,5.453)%
+  --(3.108,5.448)--(3.135,5.431)--(3.135,5.318)--(3.135,5.391)--(3.187,5.389)--(3.214,5.351)%
+  --(3.214,5.347)--(3.240,5.314)--(3.240,5.357)--(3.266,5.311)--(3.293,5.238)--(3.319,5.245)%
+  --(3.345,5.231)--(3.345,5.243)--(3.345,5.232)--(3.372,5.309)--(3.424,5.312)--(3.451,5.307)%
+  --(3.451,5.239)--(3.451,5.254)--(3.503,5.230)--(3.503,5.219)--(3.503,5.319)--(3.530,5.285)%
+  --(3.530,5.236)--(3.530,5.238)--(3.582,5.214)--(3.609,5.198)--(3.635,5.109)--(3.661,5.150)%
+  --(3.714,5.153)--(3.714,5.147)--(3.714,5.139)--(3.767,5.120)--(3.793,5.067)--(3.793,5.093)%
+  --(3.819,5.070)--(3.819,5.065)--(3.819,5.060)--(3.898,5.016)--(3.951,4.974)--(4.004,4.951)%
+  --(4.030,4.920)--(4.056,4.896)--(4.083,4.884)--(4.109,4.856)--(4.109,4.869)--(4.109,4.848)%
+  --(4.135,4.855)--(4.293,7.697)--(4.293,7.719)--(4.320,7.695)--(4.320,7.836)--(4.320,7.856)%
+  --(4.320,7.886)--(4.346,7.835)--(4.346,7.921)--(4.346,7.798)--(4.346,7.795)--(4.346,7.700)%
+  --(4.346,7.655)--(4.372,7.653)--(4.372,7.666)--(4.372,7.667)--(4.372,7.677)--(4.372,7.655)%
+  --(4.399,7.567)--(4.399,7.615)--(4.399,7.540)--(4.425,7.740)--(4.425,7.676)--(4.425,7.313)%
+  --(4.451,7.305)--(4.451,7.309)--(4.451,7.409)--(4.451,7.370)--(4.451,7.350)--(4.477,7.371)%
+  --(4.477,7.412)--(4.477,7.366)--(4.504,7.383)--(4.504,7.352)--(4.504,7.189)--(4.504,7.169)%
+  --(4.504,7.219)--(4.530,7.187)--(4.530,7.125)--(4.530,7.063)--(4.530,7.080)--(4.556,7.025)%
+  --(4.583,6.971)--(4.583,7.006)--(4.583,6.951)--(4.583,6.990)--(4.609,6.958)--(4.609,6.964)%
+  --(4.635,6.990)--(4.635,6.948)--(4.635,7.001)--(4.635,6.932)--(4.635,6.959)--(4.635,7.029)%
+  --(4.662,7.159)--(4.662,7.151)--(4.688,7.127)--(4.688,7.122)--(4.688,7.130)--(4.767,7.155)%
+  --(4.793,7.057)--(4.793,7.006)--(4.820,6.932)--(4.820,7.007)--(4.846,7.048)--(4.872,6.911)%
+  --(4.899,6.874)--(4.951,6.845)--(4.978,6.849)--(4.978,6.828)--(5.004,6.860)--(5.004,6.851)%
+  --(5.030,6.835)--(5.109,6.791)--(5.136,6.869)--(5.215,6.837)--(5.241,6.832)--(5.346,6.855)%
+  --(5.478,6.851)--(5.478,6.843)--(5.662,6.851)--(5.768,6.848)--(5.847,6.864)--(5.899,8.865)%
+  --(5.899,8.838)--(5.899,8.791)--(5.926,8.743)--(5.952,8.632)--(5.952,8.641)--(5.978,8.620)%
+  --(5.978,8.662)--(5.978,8.672)--(6.005,8.589)--(6.005,8.591)--(6.031,8.576)--(6.031,8.530)%
+  --(6.057,8.508)--(6.057,8.593)--(6.084,8.482)--(6.084,8.497)--(6.136,8.439)--(6.136,8.469)%
+  --(6.163,8.394)--(6.163,8.468)--(6.189,8.477)--(6.189,8.492)--(6.215,8.435)--(6.215,8.426)%
+  --(6.215,8.478)--(6.242,8.418)--(6.242,8.311)--(6.242,8.282)--(6.242,8.110)--(6.268,8.056)%
+  --(6.268,8.025)--(6.268,7.986)--(6.268,7.987)--(6.268,7.981)--(6.294,8.044)--(6.294,8.035)%
+  --(6.321,7.988)--(6.347,7.967)--(6.347,8.013)--(6.373,8.022)--(6.373,7.949)--(6.400,7.994)%
+  --(6.426,7.988)--(6.426,7.942)--(6.426,7.960)--(6.452,7.958)--(6.505,7.978)--(6.558,7.992)%
+  --(6.584,7.962)--(6.610,7.964)--(6.610,7.908)--(6.610,7.905)--(6.953,7.873)--(7.111,7.840)%
+  --(7.163,7.775)--(7.216,7.776)--(7.242,7.700)--(7.242,7.683)--(7.242,7.621)--(7.295,7.664)%
+  --(7.295,7.690)--(7.374,7.683)--(7.400,7.690)--(7.453,7.692)--(7.506,9.278)--(7.506,9.200)%
+  --(7.532,9.206)--(7.532,9.226)--(7.532,9.221)--(7.558,9.186)--(7.558,9.061)--(7.558,9.046)%
+  --(7.558,8.948)--(7.585,8.977)--(7.585,8.950)--(7.585,8.893)--(7.611,8.880)--(7.611,8.841)%
+  --(7.611,8.822)--(7.611,8.864)--(7.637,8.879)--(7.637,8.933)--(7.664,8.934)--(7.664,8.909)%
+  --(7.664,8.931)--(7.690,8.961)--(7.690,8.985)--(7.690,8.968)--(7.743,8.933)--(7.795,8.911)%
+  --(7.822,8.899)--(7.848,8.897)--(7.848,9.054)--(7.848,9.060)--(7.874,9.079)--(7.927,9.132)%
+  --(7.953,9.102)--(7.953,9.121)--(7.980,9.080)--(8.006,9.070)--(8.032,9.090)--(8.059,9.073)%
+  --(8.059,8.882)--(8.085,8.844)--(8.085,8.855)--(8.111,8.832)--(8.138,8.788)--(8.138,8.771)%
+  --(8.190,8.753)--(8.190,8.641)--(8.190,8.634)--(8.216,8.631)--(8.269,8.608)--(8.295,8.593)%
+  --(8.322,8.564)--(8.348,8.539)--(8.374,8.540)--(8.401,8.544)--(8.506,8.535)--(8.585,8.614)%
+  --(8.611,8.612)--(8.664,8.559)--(9.006,8.577)--(9.138,10.316)--(9.164,10.238)--(9.164,10.182)%
+  --(9.164,10.026)--(9.191,9.973)--(9.217,9.956)--(9.217,9.954)--(9.243,9.913)--(9.243,9.888)%
+  --(9.243,9.675)--(9.270,9.615)--(9.270,9.614)--(9.296,9.538)--(9.322,9.528)--(9.349,9.504)%
+  --(9.349,9.542)--(9.349,9.522)--(9.375,9.494)--(9.401,9.539)--(9.401,9.548)--(9.428,9.518)%
+  --(9.480,9.492)--(9.507,9.491)--(9.533,9.457)--(9.533,9.459)--(9.691,9.383)--(9.717,9.392)%
+  --(9.717,9.405)--(9.744,9.396)--(9.823,9.302)--(9.849,9.202)--(9.954,9.209)--(9.981,9.183)%
+  --(10.007,9.182)--(10.033,9.177)--(10.060,9.164)--(10.086,9.059)--(10.165,9.098)--(10.165,9.121)%
+  --(10.244,9.172)--(10.270,9.141)--(10.349,9.172)--(10.349,9.153)--(10.455,9.148)--(10.455,9.106)%
+  --(10.455,9.096)--(10.639,9.070)--(10.850,10.296)--(10.902,10.295)--(10.902,10.280)--(10.929,10.289)%
+  --(10.929,10.204)--(10.981,10.185)--(11.060,10.165)--(11.060,10.203)--(11.060,10.216)--(11.087,10.227)%
+  --(11.113,10.245)--(11.139,10.247)--(11.166,10.221)--(11.218,10.206)--(11.245,10.220)--(11.297,10.179)%
+  --(11.324,10.153)--(11.350,10.115)--(11.429,10.120)--(11.429,10.073)--(11.482,10.064)--(11.482,10.051)%
+  --(11.508,9.917)--(11.508,9.923)--(11.534,9.809)--(11.534,9.769)--(11.561,9.766)--(11.587,9.768)%
+  --(11.640,9.748)--(11.640,9.738)--(11.719,9.771)--(11.719,9.728)--(11.745,9.769)--(11.824,9.709)%
+  --(11.876,9.675)--(11.903,9.629)--(11.929,9.614)--(11.982,9.588)--(12.008,9.581)--(12.087,9.565)%
+  --(12.192,9.547)--(12.219,9.606)--(12.245,9.610)--(12.298,9.591);
 \gpcolor{color=gp lt color border}
-\node[gp node right] at (12.199,9.740) {Strategic Resource Penalty};
+\node[gp node right] at (13.289,12.205) {Strategic Resource Penalty};
 \gpcolor{rgb color={0.184,0.243,0.918}}
-\draw[gp path] (12.383,9.740)--(13.299,9.740);
-\draw[gp path] (2.608,9.730)--(2.634,9.659)--(2.634,9.547)--(2.634,9.528)--(2.634,9.455)%
-  --(2.661,9.404)--(2.661,9.367)--(2.661,9.273)--(2.687,9.221)--(2.687,9.047)--(2.687,9.032)%
-  --(2.713,8.981)--(2.713,8.871)--(2.713,8.834)--(2.713,8.776)--(2.740,8.715)--(2.740,8.657)%
-  --(2.740,8.625)--(2.740,8.536)--(2.740,8.511)--(2.766,8.461)--(2.766,8.457)--(2.766,8.358)%
-  --(2.766,8.317)--(2.766,8.301)--(2.792,8.101)--(2.792,8.031)--(2.792,8.001)--(2.792,7.941)%
-  --(2.792,7.922)--(2.792,7.867)--(2.819,7.838)--(2.819,7.801)--(2.819,7.765)--(2.819,7.761)%
-  --(2.819,7.754)--(2.819,7.721)--(2.819,7.677)--(2.845,7.645)--(2.845,7.638)--(2.845,7.629)%
-  --(2.845,7.621)--(2.845,7.572)--(2.845,7.555)--(2.845,7.541)--(2.871,7.540)--(2.871,7.528)%
-  --(2.871,7.511)--(2.871,7.506)--(2.871,7.486)--(2.898,7.483)--(2.898,7.473)--(2.898,7.442)%
-  --(2.898,7.408)--(2.924,7.403)--(2.950,7.395)--(2.950,7.386)--(2.950,7.380)--(2.950,7.358)%
-  --(2.950,7.356)--(2.977,7.355)--(2.977,7.336)--(2.977,7.318)--(3.003,7.297)--(3.029,7.293)%
-  --(3.056,7.291)--(3.056,7.276)--(3.056,7.271)--(3.056,7.252)--(3.082,7.241)--(3.082,7.218)%
-  --(3.108,7.212)--(3.108,7.211)--(3.135,7.203)--(3.187,7.186)--(3.187,7.169)--(3.214,7.165)%
-  --(3.240,7.163)--(3.240,7.155)--(3.266,7.153)--(3.266,7.136)--(3.293,7.135)--(3.319,7.135)%
-  --(3.319,7.128)--(3.345,7.124)--(3.345,6.981)--(3.345,6.972)--(3.372,6.972)--(3.372,6.970)%
-  --(3.424,6.949)--(3.451,6.941)--(3.451,6.935)--(3.451,6.934)--(3.477,6.898)--(3.503,6.894)%
-  --(3.530,6.888)--(3.530,6.884)--(3.556,6.873)--(3.582,6.858)--(3.609,6.854)--(3.661,6.849)%
-  --(3.714,6.849)--(3.740,6.849)--(3.740,6.837)--(3.793,6.837)--(3.819,6.836)--(3.872,6.834)%
-  --(3.898,6.834)--(4.004,6.825)--(4.030,6.824)--(4.056,6.810)--(4.083,6.792)--(4.214,6.705)%
-  --(4.267,6.469)--(4.267,6.439)--(4.267,6.337)--(4.293,6.322)--(4.293,6.276)--(4.293,6.251)%
-  --(4.293,6.247)--(4.320,6.225)--(4.320,6.192)--(4.320,6.191)--(4.320,6.180)--(4.346,6.155)%
-  --(4.346,6.094)--(4.346,6.089)--(4.372,6.083)--(4.372,6.050)--(4.372,6.036)--(4.372,5.991)%
-  --(4.372,5.987)--(4.372,5.899)--(4.399,5.898)--(4.399,5.824)--(4.399,5.729)--(4.399,5.712)%
-  --(4.399,5.686)--(4.425,5.679)--(4.451,5.575)--(4.451,5.560)--(4.451,5.501)--(4.477,5.497)%
-  --(4.477,5.476)--(4.477,5.449)--(4.477,5.421)--(4.530,5.369)--(4.530,5.333)--(4.530,5.329)%
-  --(4.556,5.325)--(4.583,5.213)--(4.583,5.149)--(4.583,5.122)--(4.609,5.119)--(4.635,5.082)%
-  --(4.635,4.992)--(4.688,4.975)--(4.714,4.969)--(4.714,4.948)--(4.741,4.924)--(4.793,4.909)%
-  --(4.793,4.897)--(4.820,4.886)--(4.846,4.875)--(4.925,4.864)--(4.925,4.861)--(4.978,4.856)%
-  --(4.978,4.816)--(5.004,4.801)--(5.004,4.793)--(5.057,4.785)--(5.057,4.781)--(5.083,4.779)%
-  --(5.083,4.772)--(5.083,4.756)--(5.136,4.735)--(5.162,4.713)--(5.241,4.711)--(5.241,4.705)%
-  --(5.320,4.702)--(5.346,4.689)--(5.399,4.681)--(5.452,4.670)--(5.478,4.666)--(5.610,4.643)%
-  --(5.689,4.636)--(5.794,4.634)--(5.873,4.672)--(5.873,4.532)--(5.873,4.490)--(5.899,4.469)%
-  --(5.899,4.380)--(5.899,4.309)--(5.952,4.278)--(5.952,4.233)--(5.978,4.146)--(5.978,4.129)%
-  --(5.978,4.123)--(5.978,4.109)--(6.005,4.092)--(6.005,4.086)--(6.005,4.083)--(6.005,4.073)%
-  --(6.031,4.054)--(6.031,4.012)--(6.031,3.999)--(6.031,3.995)--(6.057,3.987)--(6.084,3.985)%
-  --(6.084,3.889)--(6.110,3.887)--(6.136,3.836)--(6.136,3.828)--(6.136,3.804)--(6.189,3.802)%
-  --(6.189,3.800)--(6.189,3.797)--(6.215,3.708)--(6.242,3.698)--(6.242,3.696)--(6.242,3.654)%
-  --(6.242,3.643)--(6.294,3.622)--(6.321,3.598)--(6.373,3.593)--(6.426,3.558)--(6.479,3.539)%
-  --(6.479,3.526)--(6.558,3.519)--(6.610,3.518)--(6.637,3.512)--(6.663,3.506)--(6.716,3.505)%
-  --(6.742,3.481)--(6.742,3.468)--(6.768,3.452)--(6.768,3.413)--(6.795,3.392)--(6.821,3.377)%
-  --(6.874,3.376)--(6.979,3.372)--(6.979,3.369)--(6.979,3.355)--(7.032,3.352)--(7.058,3.348)%
-  --(7.058,3.328)--(7.190,3.308)--(7.216,3.302)--(7.269,3.301)--(7.295,3.301)--(7.374,3.293)%
-  --(7.400,3.279)--(7.479,3.463)--(7.479,3.456)--(7.479,3.407)--(7.479,3.360)--(7.506,3.272)%
-  --(7.506,3.255)--(7.506,3.183)--(7.506,3.163)--(7.532,3.072)--(7.532,3.050)--(7.532,3.027)%
-  --(7.532,2.986)--(7.558,2.977)--(7.558,2.926)--(7.585,2.862)--(7.585,2.817)--(7.585,2.815)%
-  --(7.611,2.809)--(7.637,2.803)--(7.637,2.791)--(7.664,2.791)--(7.664,2.771)--(7.690,2.771)%
-  --(7.716,2.770)--(7.716,2.763)--(7.743,2.763)--(7.769,2.762)--(7.769,2.760)--(7.822,2.736)%
-  --(7.901,2.730)--(7.953,2.729)--(7.953,2.564)--(7.980,2.547)--(8.032,2.546)--(8.085,2.482)%
-  --(8.111,2.480)--(8.138,2.480)--(8.243,2.474)--(8.243,2.471)--(8.295,2.466)--(8.322,2.460)%
-  --(8.401,2.458)--(8.427,2.456)--(8.427,2.451)--(8.453,2.443)--(8.506,2.442)--(8.532,2.436)%
-  --(8.585,2.383)--(8.611,2.370)--(8.638,2.362)--(8.664,2.357)--(8.743,2.353)--(8.822,2.349)%
-  --(8.822,2.345)--(8.875,2.340)--(8.954,2.339)--(8.954,2.211)--(8.980,2.200)--(8.980,2.194)%
-  --(8.980,2.191)--(9.033,2.191)--(9.059,3.003)--(9.059,2.978)--(9.085,2.973)--(9.085,2.965)%
-  --(9.138,2.919)--(9.138,2.909)--(9.164,2.869)--(9.164,2.810)--(9.217,2.808)--(9.217,2.725)%
-  --(9.217,2.640)--(9.243,2.623)--(9.243,2.489)--(9.270,2.482)--(9.322,2.433)--(9.322,2.385)%
-  --(9.322,2.376)--(9.322,2.368)--(9.349,2.343)--(9.349,2.337)--(9.349,2.331)--(9.375,2.331)%
-  --(9.375,2.330)--(9.428,2.318)--(9.507,2.313)--(9.507,2.297)--(9.533,2.297)--(9.533,2.280)%
-  --(9.586,2.279)--(9.586,2.273)--(9.586,2.263)--(9.717,2.220)--(9.744,2.210)--(9.770,2.209)%
-  --(9.796,2.203)--(9.796,2.197)--(9.796,2.191)--(9.823,2.188)--(9.849,2.173)--(9.954,2.172)%
-  --(10.007,2.172)--(10.007,2.168)--(10.007,2.046)--(10.060,2.044)--(10.165,2.001)--(10.191,1.998)%
-  --(10.270,1.980)--(10.270,1.975)--(10.349,1.974)--(10.402,1.968)--(10.534,1.968)--(10.534,1.965)%
-  --(10.692,2.747)--(10.718,2.683)--(10.744,2.680)--(10.744,2.645)--(10.744,2.588)--(10.797,2.587)%
-  --(10.797,2.580)--(10.823,2.574)--(10.823,2.489)--(10.823,2.483)--(10.850,2.477)--(10.876,2.468)%
-  --(10.876,2.466)--(10.902,2.358)--(10.929,2.350)--(10.929,2.343)--(10.955,2.307)--(10.955,2.260)%
-  --(10.981,2.259)--(11.008,2.257)--(11.034,2.250)--(11.060,2.173)--(11.060,2.157)--(11.139,2.157)%
-  --(11.139,2.150)--(11.166,2.140)--(11.271,2.133)--(11.271,2.076)--(11.271,2.068)--(11.271,2.059)%
-  --(11.297,2.053)--(11.297,2.048)--(11.324,2.040)--(11.376,2.039)--(11.508,2.038)--(11.719,2.037)%
-  --(11.745,2.031)--(11.745,2.013)--(11.745,2.011)--(11.771,2.005)--(11.798,1.999)--(11.929,1.999)%
-  --(11.929,1.997)--(11.955,1.996)--(11.982,1.985)--(12.008,1.984)--(12.061,1.978)--(12.061,1.977)%
-  --(12.166,1.973);
+\draw[gp path] (13.473,12.205)--(14.389,12.205);
+\draw[gp path] (2.608,10.560)--(2.634,10.357)--(2.634,10.257)--(2.634,10.201)--(2.634,10.159)%
+  --(2.634,10.076)--(2.634,10.018)--(2.661,9.989)--(2.661,9.871)--(2.661,9.810)--(2.661,9.678)%
+  --(2.661,9.569)--(2.661,9.493)--(2.661,9.488)--(2.687,9.433)--(2.687,9.408)--(2.687,9.332)%
+  --(2.687,9.308)--(2.687,9.281)--(2.687,9.178)--(2.687,9.089)--(2.713,8.969)--(2.713,8.938)%
+  --(2.713,8.927)--(2.713,8.909)--(2.713,8.763)--(2.740,8.755)--(2.740,8.750)--(2.740,8.683)%
+  --(2.740,8.643)--(2.740,8.627)--(2.740,8.611)--(2.740,8.572)--(2.766,8.564)--(2.766,8.554)%
+  --(2.766,8.537)--(2.766,8.487)--(2.766,8.465)--(2.766,8.434)--(2.766,8.409)--(2.766,8.402)%
+  --(2.792,8.360)--(2.792,8.324)--(2.792,8.309)--(2.792,8.238)--(2.819,8.102)--(2.819,8.077)%
+  --(2.819,8.073)--(2.819,8.060)--(2.819,8.039)--(2.819,8.008)--(2.845,7.963)--(2.845,7.950)%
+  --(2.845,7.946)--(2.845,7.924)--(2.845,7.914)--(2.871,7.898)--(2.871,7.876)--(2.871,7.870)%
+  --(2.871,7.859)--(2.871,7.857)--(2.898,7.838)--(2.898,7.828)--(2.898,7.809)--(2.898,7.803)%
+  --(2.898,7.789)--(2.898,7.783)--(2.898,7.749)--(2.924,7.737)--(2.924,7.734)--(2.950,7.711)%
+  --(2.977,7.706)--(2.977,7.675)--(3.003,7.664)--(3.003,7.654)--(3.003,7.640)--(3.003,7.601)%
+  --(3.029,7.598)--(3.056,7.569)--(3.082,7.565)--(3.108,7.546)--(3.108,7.536)--(3.135,7.536)%
+  --(3.135,7.532)--(3.187,7.532)--(3.214,7.532)--(3.240,7.519)--(3.240,7.514)--(3.266,7.514)%
+  --(3.293,7.511)--(3.319,7.507)--(3.345,7.507)--(3.345,7.494)--(3.345,7.473)--(3.372,7.470)%
+  --(3.424,7.469)--(3.451,7.466)--(3.451,7.441)--(3.451,7.434)--(3.503,7.434)--(3.503,7.433)%
+  --(3.503,7.428)--(3.530,7.423)--(3.530,7.408)--(3.530,7.406)--(3.582,7.400)--(3.609,7.395)%
+  --(3.635,7.395)--(3.661,7.387)--(3.714,7.377)--(3.767,7.377)--(3.793,7.377)--(3.793,7.371)%
+  --(3.819,7.371)--(3.819,7.365)--(3.819,7.359)--(3.898,7.354)--(3.951,7.354)--(4.004,7.354)%
+  --(4.030,7.354)--(4.056,7.348)--(4.083,7.345)--(4.109,7.345)--(4.109,7.327)--(4.135,7.322)%
+  --(4.293,7.114)--(4.293,7.068)--(4.320,7.053)--(4.320,7.036)--(4.320,6.984)--(4.320,6.951)%
+  --(4.346,6.863)--(4.346,6.853)--(4.346,6.836)--(4.346,6.823)--(4.346,6.796)--(4.346,6.749)%
+  --(4.372,6.720)--(4.372,6.714)--(4.372,6.517)--(4.372,6.513)--(4.372,6.505)--(4.399,6.470)%
+  --(4.399,6.204)--(4.399,6.161)--(4.425,6.145)--(4.425,6.100)--(4.425,5.928)--(4.451,5.902)%
+  --(4.451,5.881)--(4.451,5.828)--(4.451,5.812)--(4.477,5.753)--(4.477,5.744)--(4.477,5.743)%
+  --(4.504,5.715)--(4.504,5.710)--(4.504,5.670)--(4.504,5.650)--(4.504,5.636)--(4.530,5.604)%
+  --(4.530,5.554)--(4.530,5.550)--(4.530,5.540)--(4.556,5.540)--(4.583,5.534)--(4.583,5.515)%
+  --(4.583,5.462)--(4.583,5.294)--(4.609,5.293)--(4.609,5.272)--(4.635,5.237)--(4.635,5.201)%
+  --(4.635,5.166)--(4.635,5.161)--(4.635,5.155)--(4.662,5.146)--(4.662,5.137)--(4.688,5.131)%
+  --(4.688,5.112)--(4.688,5.100)--(4.767,4.923)--(4.793,4.909)--(4.793,4.899)--(4.820,4.893)%
+  --(4.820,4.848)--(4.846,4.844)--(4.872,4.841)--(4.899,4.829)--(4.951,4.825)--(4.978,4.819)%
+  --(4.978,4.811)--(5.004,4.802)--(5.004,4.788)--(5.030,4.757)--(5.109,4.757)--(5.136,4.748)%
+  --(5.215,4.742)--(5.241,4.739)--(5.346,4.736)--(5.478,4.732)--(5.478,4.714)--(5.662,4.703)%
+  --(5.768,4.703)--(5.847,4.696)--(5.899,4.744)--(5.899,4.742)--(5.899,4.605)--(5.926,4.580)%
+  --(5.952,4.463)--(5.952,4.446)--(5.978,4.442)--(5.978,4.320)--(5.978,4.316)--(6.005,4.260)%
+  --(6.005,4.253)--(6.031,4.220)--(6.031,4.219)--(6.057,4.210)--(6.057,4.173)--(6.084,4.166)%
+  --(6.084,4.157)--(6.136,4.132)--(6.136,4.118)--(6.163,4.116)--(6.163,4.107)--(6.189,4.104)%
+  --(6.189,4.039)--(6.215,4.028)--(6.215,4.026)--(6.215,3.991)--(6.242,3.914)--(6.242,3.843)%
+  --(6.242,3.823)--(6.242,3.725)--(6.268,3.720)--(6.268,3.710)--(6.268,3.708)--(6.268,3.696)%
+  --(6.268,3.689)--(6.294,3.670)--(6.294,3.668)--(6.321,3.638)--(6.347,3.626)--(6.347,3.589)%
+  --(6.373,3.573)--(6.373,3.565)--(6.400,3.560)--(6.426,3.559)--(6.426,3.538)--(6.426,3.520)%
+  --(6.452,3.494)--(6.505,3.484)--(6.558,3.474)--(6.584,3.465)--(6.610,3.465)--(6.610,3.455)%
+  --(6.610,3.437)--(6.953,3.431)--(7.111,3.431)--(7.163,3.420)--(7.216,3.417)--(7.242,3.412)%
+  --(7.242,3.411)--(7.242,3.405)--(7.295,3.392)--(7.295,3.386)--(7.374,3.386)--(7.400,3.376)%
+  --(7.453,3.375)--(7.506,3.677)--(7.506,3.665)--(7.532,3.663)--(7.532,3.647)--(7.532,3.646)%
+  --(7.558,3.635)--(7.558,3.587)--(7.558,3.583)--(7.558,3.555)--(7.585,3.550)--(7.585,3.452)%
+  --(7.585,3.444)--(7.611,3.328)--(7.611,3.267)--(7.611,3.234)--(7.611,3.141)--(7.637,3.128)%
+  --(7.637,3.111)--(7.664,3.084)--(7.664,3.064)--(7.664,2.963)--(7.690,2.958)--(7.690,2.946)%
+  --(7.690,2.932)--(7.743,2.910)--(7.795,2.909)--(7.822,2.884)--(7.848,2.874)--(7.848,2.849)%
+  --(7.848,2.837)--(7.874,2.836)--(7.927,2.831)--(7.953,2.812)--(7.953,2.737)--(7.980,2.721)%
+  --(8.006,2.720)--(8.032,2.715)--(8.059,2.711)--(8.059,2.661)--(8.085,2.660)--(8.085,2.649)%
+  --(8.111,2.640)--(8.138,2.616)--(8.138,2.614)--(8.190,2.608)--(8.190,2.603)--(8.190,2.596)%
+  --(8.216,2.596)--(8.269,2.585)--(8.295,2.583)--(8.322,2.581)--(8.348,2.568)--(8.374,2.564)%
+  --(8.401,2.561)--(8.506,2.548)--(8.585,2.546)--(8.611,2.540)--(8.664,2.540)--(9.006,2.538)%
+  --(9.138,3.436)--(9.164,3.405)--(9.164,3.300)--(9.164,3.263)--(9.191,3.244)--(9.217,3.242)%
+  --(9.217,3.241)--(9.243,3.234)--(9.243,3.229)--(9.243,3.137)--(9.270,3.125)--(9.270,3.117)%
+  --(9.270,3.076)--(9.296,3.035)--(9.322,2.988)--(9.349,2.984)--(9.349,2.974)--(9.349,2.963)%
+  --(9.375,2.961)--(9.401,2.922)--(9.401,2.810)--(9.428,2.800)--(9.480,2.797)--(9.507,2.788)%
+  --(9.533,2.688)--(9.533,2.664)--(9.691,2.626)--(9.717,2.620)--(9.717,2.583)--(9.744,2.579)%
+  --(9.823,2.558)--(9.849,2.554)--(9.954,2.503)--(9.981,2.503)--(10.007,2.489)--(10.033,2.485)%
+  --(10.060,2.471)--(10.086,2.469)--(10.165,2.467)--(10.165,2.465)--(10.244,2.463)--(10.270,2.459)%
+  --(10.349,2.456)--(10.349,2.453)--(10.455,2.448)--(10.455,2.444)--(10.455,2.441)--(10.639,2.439)%
+  --(10.850,3.348)--(10.902,3.341)--(10.902,3.329)--(10.929,3.173)--(10.929,3.120)--(10.981,3.055)%
+  --(11.060,3.050)--(11.060,3.027)--(11.060,3.026)--(11.087,2.953)--(11.113,2.945)--(11.139,2.940)%
+  --(11.166,2.938)--(11.218,2.932)--(11.245,2.880)--(11.297,2.833)--(11.324,2.830)--(11.350,2.743)%
+  --(11.429,2.740)--(11.429,2.735)--(11.482,2.660)--(11.482,2.654)--(11.508,2.586)--(11.508,2.575)%
+  --(11.534,2.564)--(11.534,2.563)--(11.561,2.559)--(11.587,2.557)--(11.640,2.548)--(11.640,2.544)%
+  --(11.719,2.543)--(11.719,2.539)--(11.745,2.534)--(11.824,2.531)--(11.876,2.527)--(11.903,2.508)%
+  --(11.929,2.507)--(11.982,2.505)--(12.008,2.489)--(12.087,2.488)--(12.192,2.481)--(12.219,2.470)%
+  --(12.245,2.451)--(12.298,2.450);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,11.075)--(2.608,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
-\node[gp node center,rotate=-270] at (-0.628,6.460) {Strategic Urgency [Weighted Tardiness]};
-\node[gp node center,rotate=-270] at (16.213,6.460) {Strategic Resource Penalty [Hours]};
+\draw[gp path] (2.608,10.921)--(2.608,1.845)--(13.667,1.845)--(13.667,10.921)--cycle;
+\node[gp node center,rotate=-270] at (-0.628,6.383) {Strategic Urgency [Weighted Tardiness]};
+\node[gp node center,rotate=-270] at (16.213,6.383) {Strategic Resource Penalty [Hours]};
 \node[gp node center] at (8.137,0.215) {Relative time ($\tau$) [Seconds]};
-\node[gp node center] at (8.137,11.537) {Objective Values for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.608cm}{1.845cm}}{\pgfpoint{13.667cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.608cm}{1.845cm}}{\pgfpoint{13.667cm}{10.921cm}}
 \endtikzpicture
 %% gnuplot variables
