--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_subtraction_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_subtraction_plot.tex
@@ -1,6 +1,6 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Fri 10 Jan 2025 11:10:57 AM UTC
+%% Mon 13 Jan 2025 06:20:14 PM UTC
 \tikzset{every node/.append style={scale=1.00}}
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{rgb color={0.753,0.753,0.753}}
@@ -14,235 +14,229 @@
 \node[gp node right] at (2.056,2.153) {$9.2\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.240,2.999)--(13.667,2.999);
+\draw[gp path] (2.240,2.980)--(13.667,2.980);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.240,2.999)--(2.420,2.999);
-\node[gp node right] at (2.056,3.307) {$9.3\times10^{10}$};
+\draw[gp path] (2.240,2.980)--(2.420,2.980);
+\node[gp node right] at (2.056,3.288) {$9.3\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.240,4.153)--(13.667,4.153);
+\draw[gp path] (2.240,4.114)--(13.667,4.114);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.240,4.153)--(2.420,4.153);
-\node[gp node right] at (2.056,4.461) {$9.4\times10^{10}$};
+\draw[gp path] (2.240,4.114)--(2.420,4.114);
+\node[gp node right] at (2.056,4.422) {$9.4\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.240,5.306)--(13.667,5.306);
+\draw[gp path] (2.240,5.249)--(13.667,5.249);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.240,5.306)--(2.420,5.306);
-\node[gp node right] at (2.056,5.614) {$9.5\times10^{10}$};
+\draw[gp path] (2.240,5.249)--(2.420,5.249);
+\node[gp node right] at (2.056,5.557) {$9.5\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.240,6.460)--(13.667,6.460);
+\draw[gp path] (2.240,6.383)--(13.667,6.383);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.240,6.460)--(2.420,6.460);
-\node[gp node right] at (2.056,6.768) {$9.6\times10^{10}$};
+\draw[gp path] (2.240,6.383)--(2.420,6.383);
+\node[gp node right] at (2.056,6.691) {$9.6\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.240,7.614)--(13.667,7.614);
+\draw[gp path] (2.240,7.517)--(13.667,7.517);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.240,7.614)--(2.420,7.614);
-\node[gp node right] at (2.056,7.922) {$9.7\times10^{10}$};
+\draw[gp path] (2.240,7.517)--(2.420,7.517);
+\node[gp node right] at (2.056,7.825) {$9.7\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.240,8.768)--(13.667,8.768);
+\draw[gp path] (2.240,8.652)--(13.667,8.652);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.240,8.768)--(2.420,8.768);
-\node[gp node right] at (2.056,9.076) {$9.8\times10^{10}$};
+\draw[gp path] (2.240,8.652)--(2.420,8.652);
+\node[gp node right] at (2.056,8.960) {$9.8\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.240,9.921)--(7.047,9.921);
-\draw[gp path] (13.483,9.921)--(13.667,9.921);
+\draw[gp path] (2.240,9.787)--(13.667,9.787);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.240,9.921)--(2.420,9.921);
-\node[gp node right] at (2.056,10.229) {$9.9\times10^{10}$};
+\draw[gp path] (2.240,9.787)--(2.420,9.787);
+\node[gp node right] at (2.056,10.095) {$9.9\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.240,11.075)--(13.667,11.075);
+\draw[gp path] (2.240,10.921)--(13.667,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.240,11.075)--(2.420,11.075);
-\node[gp node right] at (2.056,11.383) {$1\times10^{11}$};
+\draw[gp path] (2.240,10.921)--(2.420,10.921);
+\node[gp node right] at (2.056,11.229) {$1\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.240,1.845)--(2.240,11.075);
+\draw[gp path] (2.240,1.845)--(2.240,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.240,1.845)--(2.240,2.025);
-\draw[gp path] (2.240,11.075)--(2.240,10.895);
+\draw[gp path] (2.240,10.921)--(2.240,10.741);
 \node[gp node left,rotate=270] at (2.240,1.661) {$0$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (4.525,1.845)--(4.525,11.075);
+\draw[gp path] (4.525,1.845)--(4.525,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (4.525,1.845)--(4.525,2.025);
-\draw[gp path] (4.525,11.075)--(4.525,10.895);
+\draw[gp path] (4.525,10.921)--(4.525,10.741);
 \node[gp node left,rotate=270] at (4.525,1.661) {$60$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (6.811,1.845)--(6.811,11.075);
+\draw[gp path] (6.811,1.845)--(6.811,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (6.811,1.845)--(6.811,2.025);
-\draw[gp path] (6.811,11.075)--(6.811,10.895);
+\draw[gp path] (6.811,10.921)--(6.811,10.741);
 \node[gp node left,rotate=270] at (6.811,1.661) {$120$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (9.096,1.845)--(9.096,9.355);
-\draw[gp path] (9.096,10.895)--(9.096,11.075);
+\draw[gp path] (9.096,1.845)--(9.096,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (9.096,1.845)--(9.096,2.025);
-\draw[gp path] (9.096,11.075)--(9.096,10.895);
+\draw[gp path] (9.096,10.921)--(9.096,10.741);
 \node[gp node left,rotate=270] at (9.096,1.661) {$180$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (11.382,1.845)--(11.382,9.355);
-\draw[gp path] (11.382,10.895)--(11.382,11.075);
+\draw[gp path] (11.382,1.845)--(11.382,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (11.382,1.845)--(11.382,2.025);
-\draw[gp path] (11.382,11.075)--(11.382,10.895);
+\draw[gp path] (11.382,10.921)--(11.382,10.741);
 \node[gp node left,rotate=270] at (11.382,1.661) {$240$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (13.667,1.845)--(13.667,11.075);
+\draw[gp path] (13.667,1.845)--(13.667,10.921);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (13.667,1.845)--(13.667,2.025);
-\draw[gp path] (13.667,11.075)--(13.667,10.895);
+\draw[gp path] (13.667,10.921)--(13.667,10.741);
 \node[gp node left,rotate=270] at (13.667,1.661) {$300$};
 \draw[gp path] (13.667,1.845)--(13.487,1.845);
 \node[gp node left] at (13.851,2.153) {$150000$};
-\draw[gp path] (13.667,3.164)--(13.487,3.164);
-\node[gp node left] at (13.851,3.472) {$155000$};
-\draw[gp path] (13.667,4.482)--(13.487,4.482);
-\node[gp node left] at (13.851,4.790) {$160000$};
-\draw[gp path] (13.667,5.801)--(13.487,5.801);
-\node[gp node left] at (13.851,6.109) {$165000$};
-\draw[gp path] (13.667,7.119)--(13.487,7.119);
-\node[gp node left] at (13.851,7.427) {$170000$};
-\draw[gp path] (13.667,8.438)--(13.487,8.438);
-\node[gp node left] at (13.851,8.746) {$175000$};
-\draw[gp path] (13.667,9.756)--(13.487,9.756);
-\node[gp node left] at (13.851,10.064) {$180000$};
-\draw[gp path] (13.667,11.075)--(13.487,11.075);
-\node[gp node left] at (13.851,11.383) {$185000$};
-\draw[gp path] (2.240,11.075)--(2.240,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
-\draw[gp path] (7.047,9.355)--(7.047,10.895)--(13.483,10.895)--(13.483,9.355)--cycle;
-\node[gp node right] at (12.199,10.510) {Strategic Urgency};
+\draw[gp path] (13.667,3.142)--(13.487,3.142);
+\node[gp node left] at (13.851,3.450) {$155000$};
+\draw[gp path] (13.667,4.438)--(13.487,4.438);
+\node[gp node left] at (13.851,4.746) {$160000$};
+\draw[gp path] (13.667,5.735)--(13.487,5.735);
+\node[gp node left] at (13.851,6.043) {$165000$};
+\draw[gp path] (13.667,7.031)--(13.487,7.031);
+\node[gp node left] at (13.851,7.339) {$170000$};
+\draw[gp path] (13.667,8.328)--(13.487,8.328);
+\node[gp node left] at (13.851,8.636) {$175000$};
+\draw[gp path] (13.667,9.624)--(13.487,9.624);
+\node[gp node left] at (13.851,9.932) {$180000$};
+\draw[gp path] (13.667,10.921)--(13.487,10.921);
+\node[gp node left] at (13.851,11.229) {$185000$};
+\draw[gp path] (2.240,10.921)--(2.240,1.845)--(13.667,1.845)--(13.667,10.921)--cycle;
+\draw[gp path] (1.517,11.820)--(1.517,12.590)--(14.389,12.590)--(14.389,11.820)--cycle;
+\node[gp node right] at (6.669,12.205) {Strategic Urgency};
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.50}
-\draw[gp path] (12.383,10.510)--(13.299,10.510);
-\draw[gp path] (2.240,2.034)--(2.278,2.056)--(2.278,2.100)--(2.278,2.134)--(2.278,2.179)%
-  --(2.278,2.219)--(2.278,2.168)--(2.278,2.144)--(2.278,2.155)--(2.278,2.256)--(2.316,2.288)%
-  --(2.316,2.365)--(2.316,2.357)--(2.316,2.346)--(2.316,2.405)--(2.316,2.414)--(2.316,2.485)%
-  --(2.316,2.479)--(2.316,2.507)--(2.354,2.480)--(2.354,2.504)--(2.354,2.483)--(2.354,2.480)%
-  --(2.354,2.567)--(2.354,2.530)--(2.354,2.532)--(2.354,2.558)--(2.392,2.520)--(2.392,2.600)%
-  --(2.392,2.758)--(2.392,2.709)--(2.392,2.718)--(2.392,2.819)--(2.392,2.804)--(2.392,2.836)%
-  --(2.392,2.915)--(2.430,2.854)--(2.430,2.942)--(2.430,2.875)--(2.430,2.874)--(2.430,2.889)%
-  --(2.430,2.959)--(2.430,2.939)--(2.430,2.918)--(2.469,2.934)--(2.469,2.916)--(2.469,2.903)%
-  --(2.469,2.933)--(2.469,3.015)--(2.469,2.967)--(2.507,2.925)--(2.507,2.910)--(2.507,2.905)%
-  --(2.507,2.874)--(2.507,2.855)--(2.545,2.894)--(2.545,2.896)--(2.545,2.855)--(2.583,2.852)%
-  --(2.583,2.858)--(2.583,2.847)--(2.583,2.840)--(2.583,2.836)--(2.583,2.851)--(2.621,2.966)%
-  --(2.621,2.929)--(2.621,2.907)--(2.659,2.882)--(2.659,2.868)--(2.697,2.913)--(2.697,2.928)%
-  --(2.697,2.912)--(2.697,2.897)--(2.697,2.879)--(2.697,2.871)--(2.735,2.853)--(2.735,2.850)%
-  --(2.735,2.816)--(2.735,2.868)--(2.735,2.865)--(2.773,2.865)--(2.773,2.862)--(2.773,2.838)%
-  --(2.773,2.827)--(2.811,2.772)--(2.811,2.787)--(2.811,2.762)--(2.849,2.740)--(2.849,2.733)%
-  --(2.849,2.693)--(2.888,2.706)--(2.888,2.686)--(2.888,2.684)--(2.888,2.707)--(2.888,2.736)%
-  --(2.926,2.718)--(2.926,2.711)--(2.964,2.704)--(2.964,2.712)--(2.964,2.702)--(2.964,2.690)%
-  --(3.002,2.688)--(3.002,2.684)--(3.002,2.669)--(3.040,2.653)--(3.040,2.615)--(3.078,2.589)%
-  --(3.078,2.684)--(3.078,2.671)--(3.116,2.659)--(3.116,2.648)--(3.116,2.632)--(3.154,2.597)%
-  --(3.154,2.598)--(3.192,2.584)--(3.192,2.569)--(3.230,2.551)--(3.230,2.528)--(3.268,2.489)%
-  --(3.307,2.480)--(3.345,2.483)--(3.383,2.473)--(3.421,2.451)--(3.421,2.444)--(3.421,2.434)%
-  --(3.459,2.404)--(3.497,2.401)--(3.497,2.393)--(3.535,2.378)--(3.573,2.379)--(3.649,2.380)%
-  --(3.649,2.361)--(3.649,2.356)--(3.802,2.353)--(3.802,2.351)--(3.802,2.341)--(3.840,2.346)%
-  --(3.840,2.349)--(3.878,2.343)--(3.916,2.339)--(3.916,2.327)--(3.992,2.329)--(3.992,2.326)%
-  --(4.030,2.322)--(4.030,2.295)--(4.030,2.291)--(4.030,2.294)--(4.030,2.285)--(4.068,2.281)%
-  --(4.145,2.283)--(4.183,2.266)--(4.259,2.263)--(4.297,2.248)--(4.411,2.250)--(4.449,2.233)%
-  --(4.487,2.210)--(4.525,2.212)--(4.563,2.201)--(4.678,2.192)--(4.678,2.187)--(4.678,2.173)%
-  --(4.754,2.167)--(4.868,2.158)--(4.868,2.155)--(4.868,2.152)--(4.906,2.148)--(5.173,2.143)%
-  --(5.287,2.130)--(5.287,2.128)--(5.401,2.116)--(5.516,2.115)--(5.630,2.115)--(5.706,2.112)%
-  --(5.897,2.111)--(5.935,2.088)--(5.935,2.078)--(6.011,2.255)--(6.011,3.077)--(6.011,3.434)%
-  --(6.011,3.557)--(6.011,3.687)--(6.011,3.955)--(6.011,5.092)--(6.011,5.250)--(6.011,6.082)%
-  --(6.011,6.139)--(6.049,6.281)--(6.049,6.435)--(6.049,6.516)--(6.049,6.590)--(6.049,6.651)%
-  --(6.049,6.744)--(6.049,6.849)--(6.087,6.966)--(6.087,7.036)--(6.087,7.209)--(6.087,7.238)%
-  --(6.087,7.255)--(6.087,7.339)--(6.087,7.318)--(6.125,7.360)--(6.125,7.396)--(6.125,7.428)%
-  --(6.125,7.441)--(6.125,7.416)--(6.163,7.481)--(6.163,7.554)--(6.163,7.575)--(6.163,7.557)%
-  --(6.163,7.568)--(6.201,7.586)--(6.201,7.602)--(6.201,7.594)--(6.239,7.556)--(6.239,7.572)%
-  --(6.239,7.631)--(6.239,7.619)--(6.239,7.586)--(6.278,7.656)--(6.278,7.650)--(6.316,7.636)%
-  --(6.316,7.723)--(6.316,7.734)--(6.354,7.802)--(6.354,7.743)--(6.354,7.790)--(6.392,7.835)%
-  --(6.430,7.870)--(6.430,7.908)--(6.430,7.932)--(6.430,7.904)--(6.468,7.915)--(6.468,7.944)%
-  --(6.506,7.947)--(6.620,7.973)--(6.620,7.957)--(6.658,8.033)--(6.697,8.047)--(6.773,8.088)%
-  --(6.925,8.088)--(6.963,8.055)--(7.001,8.020)--(7.116,7.986)--(7.154,7.990)--(7.192,7.983)%
-  --(7.192,8.023)--(7.230,8.023)--(7.230,8.022)--(7.268,8.028)--(7.268,8.102)--(7.344,8.102)%
-  --(7.458,8.100)--(7.687,8.082)--(7.763,8.041)--(7.915,8.025)--(8.030,8.012)--(8.220,8.023)%
-  --(8.258,8.013)--(8.296,8.019)--(8.296,7.982)--(8.334,7.974)--(8.601,7.952)--(8.753,8.012)%
-  --(8.753,7.957)--(8.753,7.953)--(8.791,7.918)--(8.791,7.819)--(9.287,7.803)--(9.325,7.840)%
-  --(9.477,7.835)--(9.629,7.785)--(9.668,7.796)--(9.744,7.780)--(9.858,8.006)--(9.896,8.056)%
-  --(9.896,8.212)--(10.010,8.305)--(10.010,8.801)--(10.087,8.891)--(10.125,9.041)--(10.163,9.123)%
-  --(10.201,9.220)--(10.201,9.468)--(10.239,9.586)--(10.239,9.649)--(10.277,9.824)--(10.277,9.904)%
-  --(10.429,9.971)--(10.429,10.053)--(10.467,10.180)--(10.467,10.257)--(10.506,10.364)--(10.734,10.420)%
-  --(10.734,10.568)--(10.772,10.684)--(11.115,10.744)--(11.344,10.754)--(11.648,10.747)--(11.801,10.991)%
-  --(11.839,11.012);
+\draw[gp path] (6.853,12.205)--(7.769,12.205);
+\draw[gp path] (2.240,1.877)--(2.240,1.949)--(2.240,1.947)--(2.240,2.085)--(2.240,2.058)%
+  --(2.278,2.049)--(2.278,2.115)--(2.278,2.355)--(2.278,2.347)--(2.278,2.419)--(2.278,2.413)%
+  --(2.278,2.445)--(2.316,2.423)--(2.316,2.434)--(2.316,2.519)--(2.316,2.525)--(2.316,2.528)%
+  --(2.316,2.645)--(2.316,2.586)--(2.354,2.574)--(2.354,2.559)--(2.354,2.584)--(2.354,2.591)%
+  --(2.354,2.622)--(2.354,2.660)--(2.354,2.774)--(2.354,2.891)--(2.392,2.881)--(2.392,2.845)%
+  --(2.392,2.971)--(2.392,2.974)--(2.392,2.982)--(2.392,3.071)--(2.430,3.086)--(2.430,3.023)%
+  --(2.430,3.044)--(2.430,3.036)--(2.430,3.048)--(2.430,3.025)--(2.430,3.018)--(2.469,2.927)%
+  --(2.469,2.950)--(2.469,2.991)--(2.469,3.035)--(2.507,3.045)--(2.507,3.039)--(2.507,3.110)%
+  --(2.507,3.071)--(2.507,3.032)--(2.507,3.013)--(2.545,3.019)--(2.545,3.043)--(2.545,2.984)%
+  --(2.583,2.985)--(2.583,3.011)--(2.583,3.019)--(2.621,2.995)--(2.621,2.984)--(2.621,2.985)%
+  --(2.621,2.981)--(2.621,2.924)--(2.659,2.912)--(2.659,2.878)--(2.659,2.891)--(2.659,2.871)%
+  --(2.659,2.925)--(2.697,2.906)--(2.697,2.896)--(2.697,2.882)--(2.697,2.881)--(2.697,2.874)%
+  --(2.735,2.896)--(2.735,2.867)--(2.735,2.862)--(2.773,2.949)--(2.773,2.917)--(2.773,2.908)%
+  --(2.773,2.903)--(2.773,2.876)--(2.811,2.877)--(2.811,2.868)--(2.811,2.854)--(2.849,2.852)%
+  --(2.888,2.940)--(2.888,2.898)--(2.888,2.881)--(2.926,2.849)--(2.926,2.810)--(2.926,2.796)%
+  --(2.964,2.770)--(2.964,2.805)--(2.964,2.789)--(2.964,2.787)--(2.964,2.781)--(3.002,2.776)%
+  --(3.002,2.777)--(3.002,2.778)--(3.040,2.771)--(3.078,2.770)--(3.078,2.757)--(3.192,2.753)%
+  --(3.230,2.738)--(3.230,2.743)--(3.268,2.728)--(3.268,2.713)--(3.307,2.681)--(3.307,2.713)%
+  --(3.307,2.687)--(3.345,2.684)--(3.345,2.659)--(3.383,2.637)--(3.383,2.632)--(3.421,2.611)%
+  --(3.459,2.575)--(3.497,2.558)--(3.497,2.549)--(3.497,2.530)--(3.611,2.610)--(3.649,2.604)%
+  --(3.687,2.600)--(3.726,2.569)--(3.764,2.556)--(3.840,2.550)--(3.916,2.523)--(3.954,2.515)%
+  --(3.992,2.506)--(4.030,2.498)--(4.030,2.485)--(4.068,2.488)--(4.106,2.471)--(4.106,2.466)%
+  --(4.183,2.461)--(4.183,2.456)--(4.183,2.452)--(4.259,2.448)--(4.373,2.445)--(4.411,2.439)%
+  --(4.449,2.430)--(4.525,2.415)--(4.602,2.405)--(4.678,2.399)--(4.678,2.392)--(4.716,2.390)%
+  --(4.792,2.393)--(4.906,2.393)--(4.944,2.397)--(4.982,2.393)--(5.173,2.383)--(5.173,2.372)%
+  --(5.211,2.372)--(5.211,2.364)--(5.440,2.363)--(5.630,2.360)--(5.706,2.351)--(5.744,2.343)%
+  --(5.744,2.332)--(5.782,2.331)--(5.820,2.325)--(5.820,2.308)--(5.897,2.268)--(5.935,2.267)%
+  --(5.973,2.980)--(5.973,3.259)--(5.973,3.524)--(5.973,3.766)--(5.973,3.975)--(5.973,4.268)%
+  --(6.011,4.453)--(6.011,4.489)--(6.011,4.641)--(6.011,4.752)--(6.011,4.979)--(6.011,5.816)%
+  --(6.011,6.067)--(6.011,6.085)--(6.011,6.485)--(6.049,6.613)--(6.049,6.742)--(6.049,7.039)%
+  --(6.049,7.216)--(6.049,7.250)--(6.049,7.306)--(6.049,7.347)--(6.049,7.420)--(6.087,7.478)%
+  --(6.087,7.466)--(6.087,7.497)--(6.087,7.530)--(6.087,7.628)--(6.087,7.610)--(6.125,7.703)%
+  --(6.125,7.821)--(6.125,7.788)--(6.125,7.789)--(6.201,7.821)--(6.201,7.947)--(6.201,7.913)%
+  --(6.239,7.922)--(6.239,8.019)--(6.239,7.976)--(6.239,8.135)--(6.316,8.114)--(6.316,8.166)%
+  --(6.354,8.160)--(6.354,8.128)--(6.392,8.197)--(6.392,8.204)--(6.430,8.190)--(6.468,8.133)%
+  --(6.506,8.196)--(6.544,8.197)--(6.544,8.201)--(6.582,8.207)--(6.620,8.160)--(6.620,8.322)%
+  --(6.658,8.317)--(6.658,8.314)--(6.658,8.309)--(6.697,8.303)--(6.735,8.245)--(6.773,8.354)%
+  --(6.773,8.404)--(6.811,8.366)--(6.849,8.344)--(6.887,8.371)--(6.925,8.389)--(6.963,8.368)%
+  --(7.001,8.366)--(7.039,8.426)--(7.116,8.351)--(7.154,8.273)--(7.192,8.268)--(7.230,8.303)%
+  --(7.268,8.276)--(7.344,8.274)--(7.382,8.287)--(7.420,8.284)--(7.420,8.261)--(7.496,8.256)%
+  --(7.496,8.249)--(7.535,8.244)--(7.535,8.294)--(7.535,8.389)--(7.535,8.368)--(7.611,8.469)%
+  --(7.649,8.455)--(7.687,8.408)--(7.725,8.415)--(7.725,8.392)--(7.763,8.389)--(7.801,8.349)%
+  --(8.220,8.294)--(8.220,8.286)--(8.258,8.211)--(8.372,8.229)--(8.449,8.213)--(8.563,8.134)%
+  --(8.601,8.163)--(8.677,8.160)--(8.906,8.133)--(9.058,8.108)--(9.172,8.141)--(9.401,8.115)%
+  --(9.629,8.071)--(9.706,8.010)--(9.820,8.111)--(9.820,8.214)--(9.858,8.386)--(9.896,8.459)%
+  --(9.934,8.487)--(10.010,8.591)--(10.010,8.667)--(10.087,8.784)--(10.087,8.983)--(10.201,9.018)%
+  --(10.239,9.149)--(10.315,9.290)--(10.353,9.375)--(10.429,9.597)--(10.696,9.700)--(10.886,9.795)%
+  --(10.963,9.982)--(11.001,10.187)--(11.001,10.361)--(11.153,10.357)--(11.610,10.387)--(11.648,10.489)%
+  --(11.991,10.628);
 \gpcolor{color=gp lt color border}
-\node[gp node right] at (12.199,9.740) {Strategic Resource Penalty};
+\node[gp node right] at (13.105,12.205) {Strategic Resource Penalty};
 \gpcolor{rgb color={0.184,0.243,0.918}}
-\draw[gp path] (12.383,9.740)--(13.299,9.740);
-\draw[gp path] (2.240,3.231)--(2.278,3.203)--(2.278,3.192)--(2.278,3.174)--(2.278,3.155)%
-  --(2.278,3.116)--(2.278,3.111)--(2.278,3.105)--(2.278,3.088)--(2.278,3.046)--(2.316,3.038)%
-  --(2.316,3.010)--(2.316,3.003)--(2.316,2.991)--(2.316,2.982)--(2.316,2.978)--(2.316,2.946)%
-  --(2.316,2.943)--(2.316,2.920)--(2.354,2.912)--(2.354,2.910)--(2.354,2.905)--(2.354,2.894)%
-  --(2.354,2.866)--(2.354,2.853)--(2.354,2.849)--(2.392,2.849)--(2.392,2.844)--(2.392,2.838)%
-  --(2.392,2.829)--(2.392,2.827)--(2.392,2.823)--(2.392,2.818)--(2.392,2.801)--(2.430,2.791)%
-  --(2.430,2.788)--(2.430,2.783)--(2.430,2.781)--(2.430,2.770)--(2.469,2.766)--(2.469,2.765)%
-  --(2.469,2.764)--(2.469,2.758)--(2.469,2.747)--(2.469,2.745)--(2.507,2.745)--(2.507,2.741)%
-  --(2.545,2.736)--(2.583,2.734)--(2.621,2.724)--(2.621,2.721)--(2.659,2.721)--(2.697,2.720)%
-  --(2.697,2.712)--(2.735,2.712)--(2.735,2.709)--(2.773,2.709)--(2.773,2.708)--(2.811,2.708)%
-  --(2.811,2.699)--(2.849,2.699)--(2.888,2.698)--(2.888,2.695)--(2.926,2.695)--(2.964,2.695)%
-  --(2.964,2.694)--(3.002,2.694)--(3.040,2.694)--(3.078,2.694)--(3.078,2.693)--(3.116,2.693)%
-  --(3.154,2.693)--(3.192,2.693)--(3.230,2.693)--(3.268,2.693)--(3.307,2.693)--(3.345,2.693)%
-  --(3.383,2.693)--(3.421,2.693)--(3.459,2.693)--(3.497,2.693)--(3.535,2.693)--(3.573,2.693)%
-  --(3.649,2.693)--(3.802,2.693)--(3.840,2.693)--(3.878,2.693)--(3.916,2.693)--(3.992,2.693)%
-  --(4.030,2.693)--(4.068,2.693)--(4.145,2.693)--(4.183,2.693)--(4.259,2.693)--(4.297,2.693)%
-  --(4.411,2.693)--(4.449,2.693)--(4.487,2.693)--(4.525,2.693)--(4.563,2.693)--(4.678,2.693)%
-  --(4.754,2.693)--(4.868,2.693)--(4.906,2.693)--(5.173,2.693)--(5.287,2.693)--(5.401,2.693)%
-  --(5.516,2.693)--(5.630,2.693)--(5.706,2.693)--(5.897,2.693)--(5.935,2.693)--(6.011,6.784)%
-  --(6.011,6.671)--(6.011,6.500)--(6.011,6.407)--(6.011,6.288)--(6.011,6.167)--(6.011,6.150)%
-  --(6.011,6.096)--(6.011,6.050)--(6.011,5.971)--(6.049,5.909)--(6.049,5.890)--(6.049,5.876)%
-  --(6.049,5.841)--(6.049,5.816)--(6.049,5.787)--(6.049,5.755)--(6.087,5.715)--(6.087,5.689)%
-  --(6.087,5.652)--(6.087,5.634)--(6.087,5.613)--(6.087,5.581)--(6.087,5.548)--(6.125,5.541)%
-  --(6.125,5.513)--(6.125,5.494)--(6.125,5.487)--(6.125,5.471)--(6.163,5.423)--(6.163,5.400)%
-  --(6.163,5.381)--(6.163,5.366)--(6.163,5.355)--(6.201,5.351)--(6.201,5.350)--(6.201,5.347)%
-  --(6.239,5.343)--(6.239,5.336)--(6.239,5.334)--(6.239,5.325)--(6.239,5.316)--(6.278,5.312)%
-  --(6.278,5.308)--(6.316,5.305)--(6.316,5.296)--(6.354,5.275)--(6.354,5.268)--(6.354,5.267)%
-  --(6.392,5.261)--(6.430,5.250)--(6.430,5.246)--(6.430,5.240)--(6.468,5.238)--(6.468,5.230)%
-  --(6.468,5.229)--(6.506,5.229)--(6.620,5.228)--(6.620,5.227)--(6.658,5.225)--(6.697,5.222)%
-  --(6.773,5.222)--(6.925,5.222)--(6.963,5.218)--(7.001,5.217)--(7.116,5.214)--(7.154,5.201)%
-  --(7.192,5.201)--(7.192,5.198)--(7.230,5.197)--(7.230,5.196)--(7.268,5.195)--(7.268,5.192)%
-  --(7.344,5.190)--(7.458,5.185)--(7.687,5.184)--(7.763,5.183)--(7.915,5.182)--(8.030,5.180)%
-  --(8.220,5.179)--(8.258,5.177)--(8.296,5.175)--(8.334,5.175)--(8.601,5.171)--(8.753,5.167)%
-  --(8.753,5.166)--(8.791,5.166)--(9.287,5.165)--(9.325,5.165)--(9.477,5.161)--(9.629,5.161)%
-  --(9.668,5.160)--(9.744,5.160)--(9.858,10.532)--(9.896,10.513)--(9.896,10.509)--(10.010,10.508)%
-  --(10.010,10.492)--(10.087,10.484)--(10.125,10.483)--(10.163,10.477)--(10.201,10.472)--(10.201,10.464)%
-  --(10.239,10.464)--(10.277,10.462)--(10.277,10.461)--(10.429,10.456)--(10.429,10.452)--(10.467,10.448)%
-  --(10.467,10.444)--(10.506,10.431)--(10.734,10.428)--(10.734,10.426)--(10.772,10.422)--(11.115,10.420)%
-  --(11.344,10.412)--(11.648,10.407)--(11.801,10.404)--(11.839,10.391);
+\draw[gp path] (13.289,12.205)--(14.205,12.205);
+\draw[gp path] (2.240,3.311)--(2.240,3.288)--(2.240,3.276)--(2.240,3.246)--(2.240,3.233)%
+  --(2.278,3.222)--(2.278,3.167)--(2.278,3.122)--(2.278,3.114)--(2.278,3.107)--(2.278,3.089)%
+  --(2.278,3.083)--(2.278,3.057)--(2.316,3.051)--(2.316,3.042)--(2.316,3.027)--(2.316,3.000)%
+  --(2.316,2.982)--(2.316,2.976)--(2.354,2.975)--(2.354,2.971)--(2.354,2.961)--(2.354,2.951)%
+  --(2.354,2.941)--(2.354,2.939)--(2.354,2.922)--(2.392,2.919)--(2.392,2.914)--(2.392,2.888)%
+  --(2.392,2.879)--(2.392,2.875)--(2.430,2.859)--(2.430,2.840)--(2.430,2.825)--(2.430,2.815)%
+  --(2.430,2.814)--(2.469,2.814)--(2.469,2.813)--(2.469,2.809)--(2.469,2.801)--(2.507,2.798)%
+  --(2.545,2.792)--(2.545,2.791)--(2.583,2.789)--(2.583,2.785)--(2.583,2.784)--(2.621,2.784)%
+  --(2.621,2.783)--(2.621,2.777)--(2.659,2.777)--(2.659,2.776)--(2.659,2.773)--(2.697,2.773)%
+  --(2.735,2.767)--(2.773,2.758)--(2.811,2.758)--(2.849,2.758)--(2.888,2.756)--(2.926,2.756)%
+  --(2.964,2.756)--(2.964,2.752)--(2.964,2.751)--(3.002,2.751)--(3.040,2.751)--(3.078,2.751)%
+  --(3.192,2.751)--(3.230,2.751)--(3.268,2.751)--(3.307,2.751)--(3.307,2.670)--(3.345,2.670)%
+  --(3.383,2.670)--(3.421,2.670)--(3.459,2.670)--(3.497,2.670)--(3.611,2.576)--(3.649,2.576)%
+  --(3.687,2.576)--(3.726,2.576)--(3.764,2.576)--(3.840,2.576)--(3.916,2.576)--(3.954,2.576)%
+  --(3.992,2.576)--(4.030,2.576)--(4.068,2.576)--(4.106,2.576)--(4.183,2.576)--(4.259,2.576)%
+  --(4.373,2.576)--(4.411,2.576)--(4.449,2.576)--(4.525,2.576)--(4.602,2.576)--(4.678,2.576)%
+  --(4.716,2.576)--(4.792,2.576)--(4.906,2.576)--(4.944,2.576)--(4.982,2.576)--(5.173,2.576)%
+  --(5.211,2.576)--(5.440,2.576)--(5.630,2.576)--(5.706,2.576)--(5.744,2.576)--(5.782,2.576)%
+  --(5.820,2.576)--(5.897,2.576)--(5.935,2.576)--(5.973,6.693)--(5.973,6.574)--(5.973,6.497)%
+  --(5.973,6.394)--(5.973,6.285)--(5.973,6.195)--(6.011,6.095)--(6.011,6.040)--(6.011,5.956)%
+  --(6.011,5.857)--(6.011,5.788)--(6.011,5.767)--(6.011,5.709)--(6.011,5.667)--(6.011,5.648)%
+  --(6.049,5.621)--(6.049,5.584)--(6.049,5.492)--(6.049,5.460)--(6.049,5.438)--(6.049,5.400)%
+  --(6.049,5.376)--(6.049,5.350)--(6.087,5.323)--(6.087,5.299)--(6.087,5.295)--(6.087,5.290)%
+  --(6.087,5.265)--(6.125,5.238)--(6.125,5.231)--(6.125,5.224)--(6.125,5.207)--(6.201,5.198)%
+  --(6.201,5.178)--(6.201,5.161)--(6.239,5.156)--(6.239,5.144)--(6.239,5.137)--(6.239,5.127)%
+  --(6.316,5.124)--(6.316,5.115)--(6.354,5.101)--(6.354,5.096)--(6.392,5.094)--(6.392,5.088)%
+  --(6.430,5.087)--(6.468,5.087)--(6.506,5.086)--(6.544,5.084)--(6.544,5.071)--(6.582,5.070)%
+  --(6.620,5.067)--(6.620,5.064)--(6.658,5.062)--(6.658,5.056)--(6.697,5.049)--(6.735,5.048)%
+  --(6.773,5.043)--(6.773,5.035)--(6.811,5.034)--(6.849,5.034)--(6.887,5.023)--(6.925,5.021)%
+  --(6.963,5.019)--(7.001,5.019)--(7.039,5.019)--(7.116,5.019)--(7.154,5.018)--(7.192,5.018)%
+  --(7.230,5.017)--(7.268,5.010)--(7.344,5.010)--(7.382,5.008)--(7.420,5.008)--(7.496,5.005)%
+  --(7.535,5.005)--(7.535,5.003)--(7.535,4.999)--(7.611,4.998)--(7.649,4.998)--(7.687,4.995)%
+  --(7.725,4.994)--(7.763,4.992)--(7.801,4.992)--(8.220,4.992)--(8.258,4.992)--(8.372,4.988)%
+  --(8.449,4.988)--(8.563,4.988)--(8.601,4.986)--(8.677,4.986)--(8.906,4.986)--(9.058,4.986)%
+  --(9.172,4.983)--(9.401,4.983)--(9.629,4.983)--(9.706,4.981)--(9.820,10.284)--(9.820,10.268)%
+  --(9.858,10.239)--(9.896,10.212)--(9.934,10.193)--(10.010,10.186)--(10.010,10.182)--(10.087,10.182)%
+  --(10.087,10.167)--(10.201,10.140)--(10.239,10.137)--(10.315,10.133)--(10.353,10.132)--(10.429,10.130)%
+  --(10.696,10.127)--(10.886,10.121)--(10.963,10.120)--(11.001,10.106)--(11.153,10.079)--(11.610,10.071)%
+  --(11.648,10.056)--(11.991,10.048);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.240,11.075)--(2.240,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
-\node[gp node center,rotate=-270] at (-0.628,6.460) {Strategic Urgency [Weighted Tardiness]};
-\node[gp node center,rotate=-270] at (16.213,6.460) {Strategic Resource Penalty [Hours]};
+\draw[gp path] (2.240,10.921)--(2.240,1.845)--(13.667,1.845)--(13.667,10.921)--cycle;
+\node[gp node center,rotate=-270] at (-0.628,6.383) {Strategic Urgency [Weighted Tardiness]};
+\node[gp node center,rotate=-270] at (16.213,6.383) {Strategic Resource Penalty [Hours]};
 \node[gp node center] at (7.953,0.215) {Relative time ($\tau$) [Seconds]};
-\node[gp node center] at (7.953,11.537) {Objective Values for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.240cm}{1.845cm}}{\pgfpoint{13.667cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.240cm}{1.845cm}}{\pgfpoint{13.667cm}{10.921cm}}
 \endtikzpicture
 %% gnuplot variables
