--- a/papers/actor-based-large-neighborhood-search/main.tex
+++ b/papers/actor-based-large-neighborhood-search/main.tex
@@ -164,9 +164,9 @@ This paper proposes a novel actor-based optimization approach using a large
 neighborhood search metaheuristic to address dynamic scheduling problems
 characterized by real-time data updates and external inputs influencing
 optimization with future research focusing on integrating interdependent
-decisions by multiple actors with differing objectives. The framework is tested
+decisions by multiple actors with differing objectives. The metaheuristic is tested
 on real-world maintenance scheduling for offshore platforms operated by Total
-Energies in the North Sea and demonstrates general applicability to a range of
+Energies in the North Sea and demonstrates general applicability to other
 operational planning problems.
 \end{abstract}
 
