--- a/papers/actor-based-large-neighborhood-search/tex/results.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/results.tex
@@ -1,35 +1,45 @@
 \section{Results}\label{sec:3-results}
-To test the AbLNS algorithm a number of simulations are performed where the
-data are perturbed during the AbLNS algorithm execution The data from the
+To test the AbLNS algorithm, several simulations are conducted in which the data
+is perturbed during the algorithm’s execution. The data from the
 company is presented in Section~\ref{sec:data_instance}. Then the effect of
-forcing work orders into specific weekly  $\ElementPeriod \in \SetPeriod$
-schedules is presented in Section~\ref{sec:response_work_orders}  and excluding
+forcing work orders into specific weekly $\ElementPeriod \in \SetPeriod$
+schedules is presented in Section~\ref{sec:response_work_orders} and excluding
 work orders from periods is presented in Section~\ref{sec:exclusion}. The
 effects of reducing the period resource capacities $\ParStrategicResource$ is
-tested in Section~\ref{sec:results:reduced_weekly_capacity} and increasing $
-\ElementResource$ is tested in  Section~\ref{sec:increase_week_cap}.  Finally
-the effect of changing the work order values $\ParStrategicUrgency$,  is tested
+tested in Section~\ref{sec:results:reduced_weekly_capacity} and increasing
+$\ElementResource$ is tested in  Section~\ref{sec:increase_week_cap}. Finally
+the effect of changing the work order values $\ParStrategicUrgency$, is tested
 in Section~\ref{sec:results:strategic_value_changes}.
 
 \subsection{Data Instance}\label{sec:data_instance}
-This data instance is provided by Total Energies~\citep{total-energies}. The data
-is extracted from their SAP ERP system. The data instance used in this paper
-is from a specific offshore platform that for  the 2 year time horizon contains
-3487 outstanding work orders ($\SetWorkOrder{}$), have 16 different resource
-skill sets ($\SetResource$) (e.g.\ mechanics, electricians,  turbine specialists,
-etc.), and finally the scheduling horizon stretches over a 52 bi-weekly periods
-($\SetPeriod$) meaning approximately 2 years.
+The data instance used in this paper is provided by Total
+Energies~\citep{total-energies} and extracted from their SAP ERP system. It
+pertains to a specific offshore platform and covers a two-year time horizon. The
+instance includes 3,487 outstanding work orders ($\SetWorkOrder{}$), 16 distinct
+resource skill sets ($\SetResource$) (e.g., mechanics, electricians, turbine
+specialists, etc.), and spans 52 bi-weekly periods ($\SetPeriod$), roughly
+equivalent to two years.
  
 \begin{table}[H]
 \centering
-\begin{tabular}{ccccc}
+\begin{tabular}{lrrrr}
 \toprule
            & $|\SetWorkOrder{}|$ & $|\SetResource|$ & $|\SetPeriod|$ \\ \midrule
 Instance 1 & 3487                & 16               & 52             \\ \bottomrule
 \end{tabular}
 
-\caption{specific data instances from the case company. Here $\SetWorkOrder$ is the set of work orders, $\SetResource$ is the set of resources, and $\SetPeriod$ is the set of weekly periods.} % \label{fig1}
+\caption{Specific data instances from the case company. Here $\SetWorkOrder$ is the set of work orders, $\SetResource$ is the set of resources, and $\SetPeriod$ is the set of weekly periods.} % \label{fig1}
 \end{table}
+
+\subsection{Value of Objective Function Parameters}
+The optimization problem has three terms and it could be argued that the
+a pareto front should be calculated on the value of the different weightings
+between them. To not lose sight of the main contribution of the paper the
+value of the $\ParClusteringValue$ and $\ParStrategicPenalty$ has been set so
+that the $\ParStrategicPenalty$ always dominates the $\ParStrategicUrgency$ and
+that the $\ParStrategicUrgency$ always dominates the $\ParClusteringValue$.
+Furthermore the $\ParClusteringValue$ has been excluded from the results section
+to put more focus on the user-input interaction.
 
 \subsection{Response to Inclusion of Work Orders}\label{sec:response_work_orders}
 The $\ParStrategicInclude$ parameter specifies whether a work order
@@ -42,10 +52,10 @@ subject to while it is running for different timepoints $\VarMetaTime$.
 
 \begin{table}[H]
 	\centering
-	\begin{tabular}{cccccc}
+	\begin{tabular}{lrrrrr}
 	\toprule
 	                                & $\VarMetaTime_1 = 60$ & $\VarMetaTime_2 = 120$ & $\VarMetaTime_3 = 180$ & $\VarMetaTime_4 = 240$ & $\VarMetaTime_5 = 300$ \\ \midrule
-	$\Delta |\ParStrategicInclude|$ & 50                    & 50                     & 50                     & 50                     & 50                     \\ \bottomrule
+	$\Delta \ParStrategicInclude$ & 50                    & 50                     & 50                     & 50                     & 50                     \\ \bottomrule
 	\end{tabular}
 	\caption{The including work orders perturbations that the AbLNS will be affected by. 
 		Perturbations occur at 60 second time intervals affecting 50 randomly chosen work orders included into random periods.
@@ -63,21 +73,19 @@ a new solution.
 	\resizebox{10cm}{!}{
 		\input{figures/strategic_objective_value_inclusion_plot.tex}
 	}
-	\caption{Effects of perturbing the solution by forcing work orders into specific
-		periods.
+	\caption{At each 60 second time interval the the solution is perturbed by forcing work orders into specific
+		periods. Here the strategic urgency fluctuatues as the dominating term of the strategic resource penalty
+		is minimized.
 	}\label{fig:responses:inclusion}
 \end{figure}
 Figure~\ref{fig:responses:inclusion}  show 5 perturbations with the first
-at time = 60s where the objective value  slightly increases in response to
+at $\tau = 60s$ where the objective value slightly increases in response to
 the inclusion, the objective value increases due to the inclusion either
 causing the capacity to be exceeded or the inclusion resulting in a selected
-$ \ParStrategicUrgency$ that has a lower value. The remaining 4 perturbations
-all show the same  pattern, an increase in the objective value followed by
-a subsequent convergence. Notice that despite the convergence, the objective
-after convergence is higher. This is to be expected, since forcing specific
-workorders into specific weeks constrains the optimization problem more.
+$ \ParStrategicUrgency$ that has a higher value. The remaining 4 perturbations
+all show the same  pattern, an increase in the strategic urgency and
+resource penalty  followed by a subsequent convergence.
 
-%% WARN
 \subsection{Response to Exclusion}\label{sec:exclusion}
 The response to exclusion is associated with the $\ParStrategicExclude$
 parameter and is found in equation~\ref{eqn:strategic:constraint:exclude}.
@@ -92,27 +100,30 @@ of affected work orders is chosen as many exclusions of do not affect the assign
 
 \begin{table}[H]
 	\centering
-	\begin{tabular}{cccccc}
+	\begin{tabular}{lrrrrr}
 	\toprule
 	                                & $\VarMetaTime_1 = 60$ & $\VarMetaTime_2 = 120$ & $\VarMetaTime_3 = 180$ & $\VarMetaTime_4 = 240$ & $\VarMetaTime_5 = 300$ \\ \midrule
-	$\Delta |\ParStrategicExclude|$ & 500                   & 500                    & 500                    & 500                    & 500                    \\ \bottomrule
+	$\Delta \ParStrategicExclude$ & 500                   & 500                    & 500                    & 500                    & 500                    \\ \bottomrule
 	\end{tabular}
 	\caption{The exclusion of work orders perturbations from specific periods on the weekly schedule. 
 		Perturbations occur at 60 second time intervals affecting 500 work orders each time.
 	}\label{tab:responses:exclusion}
 \end{table}
 
-Figure~\ref{fig:responses:exclusion}  show a substantial spike in the objective value  
-after a perturbation as given in table~\ref{tab:responses:exclusion}. 
+Figure~\ref{fig:responses:exclusion}  show a substantial spike in the strategic urgency
+and a substantial decrease in the strategic resource penalty   
+after each perturbation as given by table~\ref{tab:responses:exclusion}. 
 
 \begin{figure}[H]
 	\centering
 	\resizebox{10cm}{!}{
 		\input{figures/strategic_objective_value_exclusion_plot.tex}
 	}
-	\caption{At each 60 second interval the objective value experiences a 
-	large spike as the exclusion of work orders make the current best
-	assignment of work orders infeasible}\label{fig:responses:exclusion}
+	\caption{At each 60 second interval the strategic urgency experiences a 
+		large spike as urgent work order are being forced to be scheduled further out.
+		The strategic resource penalty in lowered as $\ParStrategicInclude$ parameters
+		and corresponding constraints are removed 
+	}\label{fig:responses:exclusion}
 \end{figure}
 
 From figure~\ref{fig:responses:inclusion} and figure~\ref{fig:responses:exclusion} it is 
@@ -122,64 +133,62 @@ resource capacities $\ParStrategicResource$.
 \subsection{Response to Additional Weekly Capacity}\label{sec:increase_week_cap}
 Table~\ref{tab:responses:resource-addition} details the perturbations that the
 AbLNS will be subject to during its 360 second execution. Perturbing the
-resources $\ParStrategicResource$ affects the solution considerably more than
+$\ParStrategicResource$ affects the solution considerably more than
 perturbing $\ParStrategicExclude$ and $\ParStrategicInclude$ and therefore 100
 second intervals are specified instead of 60 second intervals.
 
 \begin{table}[H]
 	\centering
-	\begin{tabular}{cccccc}
+	\begin{tabular}{lrrrrr}
 	\toprule
 	                                     & $\VarMetaTime_1 = 0$ & $\VarMetaTime_2 = 100$ & $\VarMetaTime_3 = 200$   \\ \midrule
 	$\Delta |\SetPeriod|$                & 52                     & 52                     & 52                     \\ \midrule
 	$\Delta |\SetResource|$              & 16                     & 16                     & 16                     \\ \midrule
-	$ |\ParStrategicResource{}|$ (hours) &  61816                 & 111268                 & 173083                 \\ \bottomrule
+	$ ||\ParStrategicResource{}||$ (hours) &  61816                 & 111268                 & 173083                 \\ \bottomrule
 	\end{tabular}
-	\caption{The resource perturbations that the AbLNS will be affected by measured in hours. Here all $\ElementPeriod \in \SetPeriod$ and $\ElementResource \in \SetResource$ are 
+	\caption{The resource perturbations that the AbLNS will be affected by measured in hours.
+		Here all $\ElementPeriod \in \SetPeriod$ and $\ElementResource \in \SetResource$ are 
 		affected
 	}\label{tab:responses:resource-addition}
 \end{table}
 
 Figure~\ref{fig:responses:resources-addition} shows the effects of progressively
-increasing  available resources. The AbLNS starts with a base load which is
-then reduced at time = 100 seconds causing the objective value to increase
-as $\ParStrategicResourcePenalty$ in equation~\ref{eqn:strategic:constraint:resource}
-absorbs the exceeded capacity. At time = 200 the resources are increased to the
-base load again, and at time = 300 seconds the resources are increased to their
-final value.
+increasing  available resources. The AbLNS starts with an initial load which is
+then increased at $\tau = 100$ seconds causing the objective value to decrease
+as $\VarStrategicExcess$ in equation~\ref{eqn:strategic:constraint:resource}
+can achieve a lower value. At $\tau = 200$ the resources are increased
+to their final value.
 
 \begin{figure}[H]%% placement specifier
 	\centering
 	\resizebox{10cm}{!}{
 		\input{figures/strategic_objective_value_resource_addition_plot.tex}
 	}
-	\caption{Starting from a base load of 111268 hours (the same amount of 
-		hours as in the second perturbation). The resources are first reduced
-		causing a spike in the objective value. Then at each 100 second interval
-		resources are added and the objective value decreases and the AbLNS 
-		optimize around the perturbation
+	\caption{Starting from an initial load of 61816 hours. The resources are increased causing a drop in the
+		objective value and the AbLNS then optimizes around the perturbation
 	}\label{fig:responses:resources-addition}
 \end{figure}
 
 \subsection{Response to Reduced Weekly Capacity}\label{sec:results:reduced_weekly_capacity}
 Table~\ref{tab:resources:resource-subtraction} details the perturbations that the
-AbLNS will affected by. Starting from a base load of the amount of available
-resources are progressively decreased.
+AbLNS will affected by. Starting from an initial amount of available
+resource, the resources are progressively decreased.
 \begin{table}[H]
 	\centering
-	\begin{tabular}{cccccc}
+	\begin{tabular}{lrrrrr}
 	\toprule
 	                                    & $\VarMetaTime_1 = 0$ & $\VarMetaTime_2 = 100$ & $\VarMetaTime_3 = 200$ \\ \midrule
 	$\Delta |\SetPeriod|$               & 52                     & 52                     & 52                   \\ \midrule
 	$\Delta |\SetResource|$             & 16                     & 16                     & 16                   \\ \midrule
-	$ |\ParStrategicResource{}|$ (hours)& 173083                 & 111268                 & 61816                \\ \bottomrule
+	$ |\ParStrategicResource{}|$ (hours)& 173,083                 & 111,268                 & 61,816                \\ \bottomrule
 	\end{tabular}
-	\caption{The resource perturbations that the AbLNS will be affected by measured in hours. Here all $\ElementPeriod \in \SetPeriod$ and $\ElementResource \in \SetResource$ are 
+	\caption{The resource perturbations that the AbLNS will be affected by measured in hours.
+		Here all $\ElementPeriod \in \SetPeriod$ and $\ElementResource \in \SetResource$ are 
 		affected}\label{tab:resources:resource-subtraction}
 \end{table}
 
 Figure~\ref{fig:responses:resource-subtraction} shows the effects of perturbing
-the AbLNS by starting from a base load  and then progressively reducing
+the AbLNS by starting from an initial load and then progressively reducing
 capacity.
 
 \begin{figure}[H]%% placement specifier
@@ -187,33 +196,31 @@ capacity.
 	\resizebox{10cm}{!}{
 		\input{figures/strategic_objective_value_resource_subtraction_plot.tex}
 	}
-	\caption{Starting from a baseload of 111628 hours of total hours the AbLNS is 
-	progressively affected by decreasing levels of resources. At the first 
-	100 seconds the objective value decreases in response to the perturbation
-	as resources are added, after which the AbLNS is pertubed by two decreases
-	in resources causing an initial spike in the objective value followed 
-	by the AbLNS optimizing around the perturbation
+	\caption{Starting from an initial load of 173083 total hours the AbLNS is 
+		progressively affected by decreasing levels of resources. The AbLNS is pertubed by two decreases
+		in resources causing an initial spike in the objective value followed 
+		by the AbLNS optimizing around the perturbation
 	}\label{fig:responses:resource-subtraction}
 \end{figure}
 
 \subsection{Response to Changes in Work Order Values}\label{sec:results:strategic_value_changes}
-The final parameter that will be changed is the work order value $
-\ParStrategicUrgency$. Table~\ref{tab:responses:value_change} details the
+The final parameter that will be changed is the work order urgency parameter
+$\ParStrategicUrgency$. Table~\ref{tab:responses:urgency-change} details the
 perturbations that the AbLNS will by affected by. On each iteration 100 work
 orders are having their values changed by the amount  shown in the 4th row of
-table~\ref{tab:responses:value_change}.
+table~\ref{tab:responses:urgency-change}.
 
 \begin{table}[H]
 	\centering
-	\begin{tabular}{cccccc}
+	\begin{tabular}{lrrrrrr}
 	\toprule
-	                                                                                                                   & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_1 = 60$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_2 = 120$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_3 = 180$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_4 = 240$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_5 = 300$\end{tabular} \\ \midrule
+	                                                                                                                   & $\VarMetaTime_1 = 60$ & $\VarMetaTime_2 = 120$ & $\VarMetaTime_3 = 180$ & $\VarMetaTime_4 = 240$ & $\VarMetaTime_5 = 300$ \\ \midrule
 	$\Delta |\SetWorkOrder[\VarMetaTime_{n}]{} \triangle \SetWorkOrder[\VarMetaTime_{n-1}]{}              |$           & 100                                                           & 100                                                            & 100                                                            & 100                                                            & 100                                                      \\ \midrule
 	$\Delta |\SetPeriod[\VarMetaTime_{n}]{} \triangle \SetPeriod[\VarMetaTime_{n-1}]{}                    |$           & 52                                                            & 52                                                             & 52                                                             & 52                                                             & 52                                                       \\ \midrule
-	\makecell{$ \ParStrategicUrgency[\VarMetaTime_{n}] -$\\ $\ParStrategicUrgency[\VarMetaTime_{n - 1}]$}        & $3.75 \cdot 10^{7}$                                           & $3.75 \cdot 10^{7}$                                            & $3.75 \cdot 10^{7}$                                            & $3.75 \cdot 10^{7}$                                            & $3.75 \cdot 10^{7}$                                       \\ \bottomrule
+	\makecell{$ ||\ParStrategicUrgency[\VarMetaTime_{n}] -$\\ $\ParStrategicUrgency[\VarMetaTime_{n - 1}]||$}        & $3.75 \cdot 10^{7}$                                           & $3.75 \cdot 10^{7}$                                            & $3.75 \cdot 10^{7}$                                            & $3.75 \cdot 10^{7}$                                            & $3.75 \cdot 10^{7}$                                       \\ \bottomrule
 	\end{tabular}
 	\caption{Perturbations that the $\ParStrategicUrgency$ will be affected by
-	}\label{tab:responses:value_change}
+	}\label{tab:responses:urgency-change}
 \end{table}
 
 Figure~\ref{fig:responses:value_change} shows the effects of
@@ -228,9 +235,10 @@ work order to a specific period.
 		\input{figures/strategic_objective_value_weight_change_plot.tex}
 	}
 	\caption{The effects of perturbing the AbLNS by dynamically changing the
-	$\ParStrategicUrgency$ in the objective function. The objective value
-	is increasing in response to the higher cost associated with a late
-	scheduling, after which it optimizes around the perturbation
+		$\ParStrategicUrgency$ in the objective function. The objective value
+		is increasing in response to the higher cost associated with a late
+		scheduling, and a higher initial resource consumption
+		after which it optimizes around the perturbation
 	}\label{fig:responses:value_change}
 \end{figure}
  
